@@ -58,7 +58,7 @@ public class Cat extends Animal {
 
   public Cat(String name, String kittenName) {
     this(name);
-    kittens.get(0).setName(kittenName);
+    kittens.getFirst().setName(kittenName);
   }
 
   @QueryProjection
