@@ -13,7 +13,7 @@
  */
 package com.querydsl.core.types.dsl;
 
-import static org.junit.Assert.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import com.querydsl.core.types.Constant;
 import com.querydsl.core.types.Operation;
@@ -30,9 +30,9 @@ public class NumberPathTest {
     Operation<?> operation = (Operation<?>) bytePath.in(1, 2, 3);
     Constant<List<Byte>> rightArg = (Constant<List<Byte>>) operation.getArg(1);
     List<Byte> numbers = rightArg.getConstant();
-    assertEquals(Byte.valueOf((byte) 1), numbers.get(0));
-    assertEquals(Byte.valueOf((byte) 2), numbers.get(1));
-    assertEquals(Byte.valueOf((byte) 3), numbers.get(2));
+    assertThat(numbers.getFirst()).isEqualTo(Byte.valueOf((byte) 1));
+    assertThat(numbers.get(1)).isEqualTo(Byte.valueOf((byte) 2));
+    assertThat(numbers.get(2)).isEqualTo(Byte.valueOf((byte) 3));
   }
 
   @SuppressWarnings("unchecked")
@@ -41,8 +41,8 @@ public class NumberPathTest {
     Operation<?> operation = (Operation<?>) bytePath.notIn(1, 2, 3);
     Constant<List<Byte>> rightArg = (Constant<List<Byte>>) operation.getArg(1);
     List<Byte> numbers = rightArg.getConstant();
-    assertEquals(Byte.valueOf((byte) 1), numbers.get(0));
-    assertEquals(Byte.valueOf((byte) 2), numbers.get(1));
-    assertEquals(Byte.valueOf((byte) 3), numbers.get(2));
+    assertThat(numbers.getFirst()).isEqualTo(Byte.valueOf((byte) 1));
+    assertThat(numbers.get(1)).isEqualTo(Byte.valueOf((byte) 2));
+    assertThat(numbers.get(2)).isEqualTo(Byte.valueOf((byte) 3));
   }
 }
