@@ -13,32 +13,106 @@
  */
 package com.querydsl.jpa;
 
-import static com.querydsl.core.Target.*;
+import static com.querydsl.core.Target.DERBY;
+import static com.querydsl.core.Target.HSQLDB;
+import static com.querydsl.core.Target.MYSQL;
+import static com.querydsl.core.Target.ORACLE;
+import static com.querydsl.core.Target.POSTGRESQL;
+import static com.querydsl.core.Target.SQLSERVER;
+import static com.querydsl.core.Target.TERADATA;
 import static com.querydsl.jpa.JPAExpressions.select;
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.within;
 
 import com.mysema.commons.lang.Pair;
-import com.querydsl.core.*;
+import com.querydsl.core.Fetchable;
+import com.querydsl.core.FilterFactory;
+import com.querydsl.core.MatchingFiltersFactory;
+import com.querydsl.core.ProjectionsFactory;
+import com.querydsl.core.QueryExecution;
+import com.querydsl.core.QueryResults;
+import com.querydsl.core.QuerydslModule;
+import com.querydsl.core.Target;
+import com.querydsl.core.Tuple;
 import com.querydsl.core.group.Group;
 import com.querydsl.core.group.GroupBy;
 import com.querydsl.core.group.MockTuple;
 import com.querydsl.core.group.QPair;
 import com.querydsl.core.testutil.ExcludeIn;
-import com.querydsl.core.types.*;
-import com.querydsl.core.types.dsl.*;
-import com.querydsl.jpa.domain.*;
+import com.querydsl.core.types.ArrayConstructorExpression;
+import com.querydsl.core.types.Concatenation;
+import com.querydsl.core.types.EntityPath;
+import com.querydsl.core.types.Expression;
+import com.querydsl.core.types.ExpressionUtils;
+import com.querydsl.core.types.ParamNotSetException;
+import com.querydsl.core.types.Path;
+import com.querydsl.core.types.Predicate;
+import com.querydsl.core.types.Projections;
+import com.querydsl.core.types.dsl.BooleanExpression;
+import com.querydsl.core.types.dsl.CaseBuilder;
+import com.querydsl.core.types.dsl.EnumPath;
+import com.querydsl.core.types.dsl.Expressions;
+import com.querydsl.core.types.dsl.ListExpression;
+import com.querydsl.core.types.dsl.ListPath;
+import com.querydsl.core.types.dsl.NumberExpression;
+import com.querydsl.core.types.dsl.NumberPath;
+import com.querydsl.core.types.dsl.Param;
+import com.querydsl.core.types.dsl.SimpleExpression;
+import com.querydsl.core.types.dsl.SimplePath;
+import com.querydsl.core.types.dsl.StringExpression;
+import com.querydsl.core.types.dsl.StringPath;
+import com.querydsl.jpa.domain.Animal;
+import com.querydsl.jpa.domain.Author;
+import com.querydsl.jpa.domain.Book;
+import com.querydsl.jpa.domain.Cat;
+import com.querydsl.jpa.domain.Color;
+import com.querydsl.jpa.domain.Company;
 import com.querydsl.jpa.domain.Company.Rating;
+import com.querydsl.jpa.domain.DomesticCat;
+import com.querydsl.jpa.domain.DoubleProjection;
+import com.querydsl.jpa.domain.Employee;
+import com.querydsl.jpa.domain.Entity1;
+import com.querydsl.jpa.domain.Entity2;
+import com.querydsl.jpa.domain.Foo;
+import com.querydsl.jpa.domain.JobFunction;
+import com.querydsl.jpa.domain.Numeric;
+import com.querydsl.jpa.domain.QAnimal;
+import com.querydsl.jpa.domain.QAuthor;
+import com.querydsl.jpa.domain.QBook;
+import com.querydsl.jpa.domain.QCat;
+import com.querydsl.jpa.domain.QCompany;
+import com.querydsl.jpa.domain.QDomesticCat;
+import com.querydsl.jpa.domain.QDoubleProjection;
+import com.querydsl.jpa.domain.QEmployee;
+import com.querydsl.jpa.domain.QEntity1;
+import com.querydsl.jpa.domain.QFamily;
+import com.querydsl.jpa.domain.QFoo;
+import com.querydsl.jpa.domain.QHuman;
+import com.querydsl.jpa.domain.QMammal;
+import com.querydsl.jpa.domain.QNumeric;
+import com.querydsl.jpa.domain.QShow;
+import com.querydsl.jpa.domain.QSimpleTypes;
+import com.querydsl.jpa.domain.QUser;
+import com.querydsl.jpa.domain.QWorld;
+import com.querydsl.jpa.domain.Show;
 import com.querydsl.jpa.domain4.QBookMark;
 import com.querydsl.jpa.domain4.QBookVersion;
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.util.*;
+import java.time.LocalDate;
+import java.time.LocalTime;
+import java.time.ZonedDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Calendar;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.Map.Entry;
-import org.hamcrest.Matchers;
-import org.joda.time.DateTime;
-import org.joda.time.LocalDate;
-import org.joda.time.LocalTime;
+import java.util.UUID;
 import org.junit.Before;
 import org.junit.Ignore;
 import org.junit.Test;
@@ -181,84 +255,81 @@ public abstract class AbstractJPATest {
     NumberPath<BigDecimal> bigd1 = entity.bigDecimal;
     NumberPath<BigDecimal> bigd2 = entity2.bigDecimal;
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(bigd1.add(bigd2).loe(new BigDecimal("1.00")))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(bigd1.add(bigd2).loe(new BigDecimal("1.00")))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
   public void aggregates_list_max() {
-    assertEquals(Integer.valueOf(6), query().from(cat).select(cat.id.max()).fetchFirst());
+    assertThat(query().from(cat).select(cat.id.max()).fetchFirst()).isEqualTo(Integer.valueOf(6));
   }
 
   @Test
   public void aggregates_list_min() {
-    assertEquals(Integer.valueOf(1), query().from(cat).select(cat.id.min()).fetchFirst());
+    assertThat(query().from(cat).select(cat.id.min()).fetchFirst()).isEqualTo(Integer.valueOf(1));
   }
 
   @Test
   public void aggregates_uniqueResult_max() {
-    assertEquals(Integer.valueOf(6), query().from(cat).select(cat.id.max()).fetchFirst());
+    assertThat(query().from(cat).select(cat.id.max()).fetchFirst()).isEqualTo(Integer.valueOf(6));
   }
 
   @Test
   public void aggregates_uniqueResult_min() {
-    assertEquals(Integer.valueOf(1), query().from(cat).select(cat.id.min()).fetchFirst());
+    assertThat(query().from(cat).select(cat.id.min()).fetchFirst()).isEqualTo(Integer.valueOf(1));
   }
 
   @Test
   public void alias() {
-    assertEquals(6, query().from(cat).select(cat.id.as(cat.id)).fetch().size());
+    assertThat(query().from(cat).select(cat.id.as(cat.id)).fetch()).hasSize(6);
   }
 
   @Test
   public void any_and_gt() {
-    assertEquals(
-        0,
-        query()
-            .from(cat)
-            .where(cat.kittens.any().name.eq("Ruth123"), cat.kittens.any().bodyWeight.gt(10.0))
-            .fetchCount());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.kittens.any().name.eq("Ruth123"), cat.kittens.any().bodyWeight.gt(10.0))
+                .fetchCount())
+        .isEqualTo(0);
   }
 
   @Test
   public void any_and_lt() {
-    assertEquals(
-        1,
-        query()
-            .from(cat)
-            .where(cat.kittens.any().name.eq("Ruth123"), cat.kittens.any().bodyWeight.lt(10.0))
-            .fetchCount());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.kittens.any().name.eq("Ruth123"), cat.kittens.any().bodyWeight.lt(10.0))
+                .fetchCount())
+        .isEqualTo(1);
   }
 
   @Test
   public void any_in_order() {
-    assertFalse(
-        query().from(cat).orderBy(cat.kittens.any().name.asc()).select(cat).fetch().isEmpty());
+    assertThat(query().from(cat).orderBy(cat.kittens.any().name.asc()).select(cat).fetch())
+        .isNotEmpty();
   }
 
   @Test
   public void any_in_projection() {
-    assertFalse(query().from(cat).select(cat.kittens.any()).fetch().isEmpty());
+    assertThat(query().from(cat).select(cat.kittens.any()).fetch()).isNotEmpty();
   }
 
   @Test
   public void any_in_projection2() {
-    assertFalse(query().from(cat).select(cat.kittens.any().name).fetch().isEmpty());
+    assertThat(query().from(cat).select(cat.kittens.any().name).fetch()).isNotEmpty();
   }
 
   @Test
   public void any_in_projection3() {
-    assertFalse(
-        query()
-            .from(cat)
-            .select(cat.kittens.any().name, cat.kittens.any().bodyWeight)
-            .fetch()
-            .isEmpty());
+    assertThat(
+            query().from(cat).select(cat.kittens.any().name, cat.kittens.any().bodyWeight).fetch())
+        .isNotEmpty();
   }
 
   @Test
@@ -266,8 +337,8 @@ public abstract class AbstractJPATest {
     // select cat from Cat cat where exists (
     //  select cat_kittens from Cat cat_kittens where cat_kittens member of cat.kittens and
     // cat_kittens in ?1)
-    assertFalse(
-        query().from(cat).where(cat.kittens.any().in(savedCats)).select(cat).fetch().isEmpty());
+    assertThat(query().from(cat).where(cat.kittens.any().in(savedCats)).select(cat).fetch())
+        .isNotEmpty();
   }
 
   @Test
@@ -276,46 +347,50 @@ public abstract class AbstractJPATest {
     for (Cat cat : savedCats) {
       ids.add(cat.getId());
     }
-    assertFalse(
-        query().from(cat).where(cat.kittens.any().id.in(ids)).select(cat).fetch().isEmpty());
+    assertThat(query().from(cat).where(cat.kittens.any().id.in(ids)).select(cat).fetch())
+        .isNotEmpty();
   }
 
   @Test
   public void any_in2() {
-    assertFalse(
-        query()
-            .from(cat)
-            .where(
-                cat.kittens.any().in(savedCats),
-                cat.kittens.any().in(savedCats.subList(0, 1)).not())
-            .select(cat)
-            .fetch()
-            .isEmpty());
+    assertThat(
+            query()
+                .from(cat)
+                .where(
+                    cat.kittens.any().in(savedCats),
+                    cat.kittens.any().in(savedCats.subList(0, 1)).not())
+                .select(cat)
+                .fetch())
+        .isNotEmpty();
   }
 
   @Test
   @NoBatooJPA
   public void any_in3() {
     QEmployee employee = QEmployee.employee;
-    assertFalse(
-        query()
-            .from(employee)
-            .where(employee.jobFunctions.any().in(JobFunction.CODER, JobFunction.CONSULTANT))
-            .select(employee)
-            .fetch()
-            .isEmpty());
+    assertThat(
+            query()
+                .from(employee)
+                .where(employee.jobFunctions.any().in(JobFunction.CODER, JobFunction.CONSULTANT))
+                .select(employee)
+                .fetch())
+        .isNotEmpty();
   }
 
   @Test
   public void any_simple() {
-    assertEquals(1, query().from(cat).where(cat.kittens.any().name.eq("Ruth123")).fetchCount());
+    assertThat(query().from(cat).where(cat.kittens.any().name.eq("Ruth123")).fetchCount())
+        .isEqualTo(1);
   }
 
   @Test
   public void any_any() {
-    assertEquals(
-        1,
-        query().from(cat).where(cat.kittens.any().kittens.any().name.eq("Ruth123")).fetchCount());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.kittens.any().kittens.any().name.eq("Ruth123"))
+                .fetchCount())
+        .isEqualTo(1);
   }
 
   @Test
@@ -325,46 +400,51 @@ public abstract class AbstractJPATest {
             .from(cat)
             .select(new ArrayConstructorExpression<String>(String[].class, cat.name))
             .fetch();
-    assertFalse(results.isEmpty());
+    assertThat(results).isNotEmpty();
     for (String[] result : results) {
-      assertNotNull(result[0]);
+      assertThat(result[0]).isNotNull();
     }
   }
 
   @Test
   public void as() {
-    assertTrue(query().from(QAnimal.animal.as(QCat.class)).fetchCount() > 0);
+    assertThat(query().from(QAnimal.animal.as(QCat.class)).fetchCount() > 0).isTrue();
   }
 
   @Test
   public void between() {
-    assertEquals(
-        Arrays.asList(2, 3, 4, 5),
-        query().from(cat).where(cat.id.between(2, 5)).orderBy(cat.id.asc()).select(cat.id).fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.id.between(2, 5))
+                .orderBy(cat.id.asc())
+                .select(cat.id)
+                .fetch())
+        .isEqualTo(Arrays.asList(2, 3, 4, 5));
   }
 
   @Test
   @NoBatooJPA
   public void case1() {
-    assertEquals(
-        Arrays.asList(1, 2, 2, 2, 2, 2),
-        query()
-            .from(cat)
-            .orderBy(cat.id.asc())
-            .select(cat.name.when("Bob123").then(1).otherwise(2))
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .orderBy(cat.id.asc())
+                .select(cat.name.when("Bob123").then(1).otherwise(2))
+                .fetch())
+        .isEqualTo(Arrays.asList(1, 2, 2, 2, 2, 2));
   }
 
   @Test
   @NoBatooJPA
   public void case1_long() {
-    assertEquals(
-        Arrays.asList(1L, 2L, 2L, 2L, 2L, 2L),
-        query()
-            .from(cat)
-            .orderBy(cat.id.asc())
-            .select(cat.name.when("Bob123").then(1L).otherwise(2L))
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .orderBy(cat.id.asc())
+                .select(cat.name.when("Bob123").then(1L).otherwise(2L))
+                .fetch())
+        .isEqualTo(Arrays.asList(1L, 2L, 2L, 2L, 2L, 2L));
     List<Integer> rv = query().from(cat).select(cat.name.when("Bob").then(1).otherwise(2)).fetch();
     assertInstancesOf(Integer.class, rv);
   }
@@ -377,7 +457,7 @@ public abstract class AbstractJPATest {
         query()
             .from(cat)
             .select(
-                cat.name.when("Bob").then(new LocalDate()).otherwise(new LocalDate().plusDays(1)))
+                cat.name.when("Bob").then(LocalDate.now()).otherwise(LocalDate.now().plusDays(1)))
             .fetch();
     assertInstancesOf(LocalDate.class, rv);
   }
@@ -402,7 +482,7 @@ public abstract class AbstractJPATest {
         query()
             .from(cat)
             .select(
-                cat.name.when("Bob").then(new LocalTime()).otherwise(new LocalTime().plusHours(1)))
+                cat.name.when("Bob").then(LocalTime.now()).otherwise(LocalTime.now().plusHours(1)))
             .fetch();
     assertInstancesOf(LocalTime.class, rv);
   }
@@ -423,13 +503,16 @@ public abstract class AbstractJPATest {
   @NoEclipseLink
   @NoHibernate // https://hibernate.atlassian.net/browse/HHH-8653
   public void case1_timestamp() {
-    List<DateTime> rv =
+    List<ZonedDateTime> rv =
         query()
             .from(cat)
             .select(
-                cat.name.when("Bob").then(new DateTime()).otherwise(new DateTime().plusHours(1)))
+                cat.name
+                    .when("Bob")
+                    .then(ZonedDateTime.now())
+                    .otherwise(ZonedDateTime.now().plusHours(1)))
             .fetch();
-    assertInstancesOf(DateTime.class, rv);
+    assertInstancesOf(ZonedDateTime.class, rv);
   }
 
   @Test
@@ -450,32 +533,32 @@ public abstract class AbstractJPATest {
 
   @Test
   public void case2() {
-    assertEquals(
-        Arrays.asList(4, 4, 4, 4, 4, 4),
-        query()
-            .from(cat)
-            .select(
-                Expressions.cases()
-                    .when(cat.toes.eq(2))
-                    .then(cat.id.multiply(2))
-                    .when(cat.toes.eq(3))
-                    .then(cat.id.multiply(3))
-                    .otherwise(4))
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .select(
+                    Expressions.cases()
+                        .when(cat.toes.eq(2))
+                        .then(cat.id.multiply(2))
+                        .when(cat.toes.eq(3))
+                        .then(cat.id.multiply(3))
+                        .otherwise(4))
+                .fetch())
+        .isEqualTo(Arrays.asList(4, 4, 4, 4, 4, 4));
   }
 
   @Test
   public void case3() {
-    assertEquals(
-        Arrays.asList(4, 4, 4, 4, 4, 4),
-        query()
-            .from(cat)
-            .select(
-                Expressions.cases()
-                    .when(cat.toes.in(2, 3))
-                    .then(cat.id.multiply(cat.toes))
-                    .otherwise(4))
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .select(
+                    Expressions.cases()
+                        .when(cat.toes.in(2, 3))
+                        .then(cat.id.multiply(cat.toes))
+                        .otherwise(4))
+                .fetch())
+        .isEqualTo(Arrays.asList(4, 4, 4, 4, 4, 4));
   }
 
   @Test
@@ -484,30 +567,30 @@ public abstract class AbstractJPATest {
     NumberExpression<Float> numExpression =
         cat.bodyWeight.floatValue().divide(otherCat.bodyWeight.floatValue()).multiply(100);
     NumberExpression<Float> numExpression2 = cat.id.when(0).then(0.0F).otherwise(numExpression);
-    assertEquals(
-        Arrays.asList(200, 150, 133, 125, 120),
-        query()
-            .from(cat, otherCat)
-            .where(cat.id.eq(otherCat.id.add(1)))
-            .orderBy(cat.id.asc(), otherCat.id.asc())
-            .select(numExpression2.intValue())
-            .fetch());
+    assertThat(
+            query()
+                .from(cat, otherCat)
+                .where(cat.id.eq(otherCat.id.add(1)))
+                .orderBy(cat.id.asc(), otherCat.id.asc())
+                .select(numExpression2.intValue())
+                .fetch())
+        .isEqualTo(Arrays.asList(200, 150, 133, 125, 120));
   }
 
   @Test
   public void case5() {
-    assertEquals(
-        Arrays.asList(1, 0, 1, 1, 1, 1),
-        query()
-            .from(cat)
-            .orderBy(cat.id.asc())
-            .select(cat.mate.when(savedCats.get(0)).then(0).otherwise(1))
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .orderBy(cat.id.asc())
+                .select(cat.mate.when(savedCats.getFirst()).then(0).otherwise(1))
+                .fetch())
+        .isEqualTo(Arrays.asList(1, 0, 1, 1, 1, 1));
   }
 
   private static <T> void assertInstancesOf(Class<T> clazz, Iterable<T> rows) {
     for (T row : rows) {
-      assertEquals(row.toString(), clazz, row.getClass());
+      assertThat(row.getClass()).as(row.toString()).isEqualTo(clazz);
     }
   }
 
@@ -534,7 +617,7 @@ public abstract class AbstractJPATest {
     List<Integer> weights =
         query().from(cat).select(cat.bodyWeight.castToNum(Integer.class)).fetch();
     for (int i = 0; i < cats.size(); i++) {
-      assertEquals(Integer.valueOf((int) (cats.get(i).getBodyWeight())), weights.get(i));
+      assertThat(weights.get(i)).isEqualTo(Integer.valueOf((int) (cats.get(i).getBodyWeight())));
     }
   }
 
@@ -542,7 +625,7 @@ public abstract class AbstractJPATest {
   @ExcludeIn(SQLSERVER)
   public void cast_toString() {
     for (Tuple tuple : query().from(cat).select(cat.breed, cat.breed.stringValue()).fetch()) {
-      assertEquals(tuple.get(cat.breed).toString(), tuple.get(cat.breed.stringValue()));
+      assertThat(tuple.get(cat.breed.stringValue())).isEqualTo(tuple.get(cat.breed).toString());
     }
   }
 
@@ -551,9 +634,8 @@ public abstract class AbstractJPATest {
   public void cast_toString_append() {
     for (Tuple tuple :
         query().from(cat).select(cat.breed, cat.breed.stringValue().append("test")).fetch()) {
-      assertEquals(
-          tuple.get(cat.breed).toString() + "test",
-          tuple.get(cat.breed.stringValue().append("test")));
+      assertThat(tuple.get(cat.breed.stringValue().append("test")))
+          .isEqualTo(tuple.get(cat.breed).toString() + "test");
     }
   }
 
@@ -594,32 +676,32 @@ public abstract class AbstractJPATest {
     List<Tuple> tuples =
         query().from(cat).select(cat.id, Expressions.constantAs("abc", path)).fetch();
     for (int i = 0; i < cats.size(); i++) {
-      assertEquals(Integer.valueOf(cats.get(i).getId()), tuples.get(i).get(cat.id));
-      assertEquals("abc", tuples.get(i).get(path));
+      assertThat(tuples.get(i).get(cat.id)).isEqualTo(Integer.valueOf(cats.get(i).getId()));
+      assertThat(tuples.get(i).get(path)).isEqualTo("abc");
     }
   }
 
   @Test
   public void constant2() {
-    assertFalse(query().from(cat).select(cat.id, Expressions.constant("name")).fetch().isEmpty());
+    assertThat(query().from(cat).select(cat.id, Expressions.constant("name")).fetch()).isNotEmpty();
   }
 
   @Test
   public void constructorProjection() {
     List<Projection> projections =
         query().from(cat).select(Projections.constructor(Projection.class, cat.name, cat)).fetch();
-    assertFalse(projections.isEmpty());
+    assertThat(projections).isNotEmpty();
     for (Projection projection : projections) {
-      assertNotNull(projection);
+      assertThat(projection).isNotNull();
     }
   }
 
   @Test
   public void constructorProjection2() {
     List<Projection> projections = query().from(cat).select(new QProjection(cat.name, cat)).fetch();
-    assertFalse(projections.isEmpty());
+    assertThat(projections).isNotEmpty();
     for (Projection projection : projections) {
-      assertNotNull(projection);
+      assertThat(projection).isNotNull();
     }
   }
 
@@ -627,52 +709,54 @@ public abstract class AbstractJPATest {
   public void constructorProjection3() {
     List<Projection> projections =
         query().from(cat).select(new QProjection(cat.id, Expressions.FALSE)).fetch();
-    assertFalse(projections.isEmpty());
+    assertThat(projections).isNotEmpty();
     for (Projection projection : projections) {
-      assertNotNull(projection);
+      assertThat(projection).isNotNull();
     }
   }
 
   @Test
   public void contains_ic() {
     QFoo foo = QFoo.foo;
-    assertEquals(1, query().from(foo).where(foo.bar.containsIgnoreCase("München")).fetchCount());
+    assertThat(query().from(foo).where(foo.bar.containsIgnoreCase("München")).fetchCount())
+        .isEqualTo(1);
   }
 
   @Test
   public void contains1() {
-    assertEquals(1, query().from(cat).where(cat.name.contains("eli")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.contains("eli")).fetchCount()).isEqualTo(1);
   }
 
   @Test
   public void contains2() {
-    assertEquals(1L, query().from(cat).where(cat.kittens.contains(savedCats.get(0))).fetchCount());
+    assertThat(query().from(cat).where(cat.kittens.contains(savedCats.getFirst())).fetchCount())
+        .isEqualTo(1L);
   }
 
   @Test
   public void contains3() {
-    assertEquals(1L, query().from(cat).where(cat.name.contains("_")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.contains("_")).fetchCount()).isEqualTo(1L);
   }
 
   @Test
   public void contains4() {
     QEmployee employee = QEmployee.employee;
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(employee)
-            .where(
-                employee.jobFunctions.contains(JobFunction.CODER),
-                employee.jobFunctions.contains(JobFunction.CONSULTANT),
-                employee.jobFunctions.size().eq(2))
-            .select(employee)
-            .fetch());
+    assertThat(
+            query()
+                .from(employee)
+                .where(
+                    employee.jobFunctions.contains(JobFunction.CODER),
+                    employee.jobFunctions.contains(JobFunction.CONSULTANT),
+                    employee.jobFunctions.size().eq(2))
+                .select(employee)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
   public void count() {
     QShow show = QShow.show;
-    assertTrue(query().from(show).fetchCount() > 0);
+    assertThat(query().from(show).fetchCount() > 0).isTrue();
   }
 
   @Test
@@ -705,15 +789,14 @@ public abstract class AbstractJPATest {
             .from(cat)
             .orderBy(cat.mate.id.asc().nullsFirst(), cat.id.asc().nullsFirst())
             .fetch();
-    assertThat(
-        result,
-        Matchers.<Tuple>contains(
+    assertThat(result)
+        .containsExactly(
             new MockTuple(new Object[] {1, null}),
             new MockTuple(new Object[] {6, null}),
             new MockTuple(new Object[] {2, 1}),
             new MockTuple(new Object[] {3, 2}),
             new MockTuple(new Object[] {4, 3}),
-            new MockTuple(new Object[] {5, 4})));
+            new MockTuple(new Object[] {5, 4}));
   }
 
   @Test
@@ -728,64 +811,68 @@ public abstract class AbstractJPATest {
             .from(cat)
             .orderBy(cat.mate.id.asc().nullsFirst())
             .fetch();
-    assertThat(
-        result,
-        Matchers.<Tuple>contains(
+    assertThat(result)
+        .containsExactly(
             new MockTuple(new Object[] {2, 1}),
             new MockTuple(new Object[] {3, 2}),
             new MockTuple(new Object[] {4, 3}),
-            new MockTuple(new Object[] {5, 4})));
+            new MockTuple(new Object[] {5, 4}));
   }
 
   @Test
   @NoEclipseLink(HSQLDB)
   public void count_distinct3() {
     QCat kitten = new QCat("kitten");
-    assertEquals(
-        4,
-        query()
-            .from(cat)
-            .leftJoin(cat.kittens, kitten)
-            .select(kitten.countDistinct())
-            .fetchOne()
-            .intValue());
-    assertEquals(
-        6,
-        query()
-            .from(cat)
-            .leftJoin(cat.kittens, kitten)
-            .select(kitten.countDistinct())
-            .fetchCount());
+    assertThat(
+            query()
+                .from(cat)
+                .leftJoin(cat.kittens, kitten)
+                .select(kitten.countDistinct())
+                .fetchOne()
+                .intValue())
+        .isEqualTo(4);
+    assertThat(
+            query()
+                .from(cat)
+                .leftJoin(cat.kittens, kitten)
+                .select(kitten.countDistinct())
+                .fetchCount())
+        .isEqualTo(6);
   }
 
   @Test
   public void distinctResults() {
     System.out.println("-- fetch results");
     QueryResults<Date> res = query().from(cat).limit(2).select(cat.birthdate).fetchResults();
-    assertEquals(2, res.getResults().size());
-    assertEquals(6L, res.getTotal());
+    assertThat(res.getResults()).hasSize(2);
+    assertThat(res.getTotal()).isEqualTo(6L);
     System.out.println();
 
     System.out.println("-- fetch distinct results");
     res = query().from(cat).limit(2).distinct().select(cat.birthdate).fetchResults();
-    assertEquals(1, res.getResults().size());
-    assertEquals(1L, res.getTotal());
+    assertThat(res.getResults()).hasSize(1);
+    assertThat(res.getTotal()).isEqualTo(1L);
     System.out.println();
 
     System.out.println("-- fetch distinct");
-    assertEquals(1, query().from(cat).distinct().select(cat.birthdate).fetch().size());
+    assertThat(query().from(cat).distinct().select(cat.birthdate).fetch()).hasSize(1);
   }
 
   @Test
   public void date() {
-    assertEquals(2000, query().from(cat).select(cat.birthdate.year()).fetchFirst().intValue());
-    assertEquals(
-        200002, query().from(cat).select(cat.birthdate.yearMonth()).fetchFirst().intValue());
-    assertEquals(2, query().from(cat).select(cat.birthdate.month()).fetchFirst().intValue());
-    assertEquals(2, query().from(cat).select(cat.birthdate.dayOfMonth()).fetchFirst().intValue());
-    assertEquals(3, query().from(cat).select(cat.birthdate.hour()).fetchFirst().intValue());
-    assertEquals(4, query().from(cat).select(cat.birthdate.minute()).fetchFirst().intValue());
-    assertEquals(0, query().from(cat).select(cat.birthdate.second()).fetchFirst().intValue());
+    assertThat(query().from(cat).select(cat.birthdate.year()).fetchFirst().intValue())
+        .isEqualTo(2000);
+    assertThat(query().from(cat).select(cat.birthdate.yearMonth()).fetchFirst().intValue())
+        .isEqualTo(200002);
+    assertThat(query().from(cat).select(cat.birthdate.month()).fetchFirst().intValue())
+        .isEqualTo(2);
+    assertThat(query().from(cat).select(cat.birthdate.dayOfMonth()).fetchFirst().intValue())
+        .isEqualTo(2);
+    assertThat(query().from(cat).select(cat.birthdate.hour()).fetchFirst().intValue()).isEqualTo(3);
+    assertThat(query().from(cat).select(cat.birthdate.minute()).fetchFirst().intValue())
+        .isEqualTo(4);
+    assertThat(query().from(cat).select(cat.birthdate.second()).fetchFirst().intValue())
+        .isEqualTo(0);
   }
 
   @Test
@@ -793,7 +880,7 @@ public abstract class AbstractJPATest {
   @NoHibernate({DERBY, POSTGRESQL, SQLSERVER})
   public void date_yearWeek() {
     int value = query().from(cat).select(cat.birthdate.yearWeek()).fetchFirst();
-    assertTrue(value == 200006 || value == 200005);
+    assertThat(value == 200006 || value == 200005).isTrue();
   }
 
   @Test
@@ -801,7 +888,7 @@ public abstract class AbstractJPATest {
   @NoHibernate({DERBY, POSTGRESQL, SQLSERVER})
   public void date_week() {
     int value = query().from(cat).select(cat.birthdate.week()).fetchFirst();
-    assertTrue(value == 6 || value == 5);
+    assertThat(value == 6 || value == 5).isTrue();
   }
 
   @Test
@@ -810,37 +897,37 @@ public abstract class AbstractJPATest {
     QSimpleTypes entity = new QSimpleTypes("entity1");
     QSimpleTypes entity2 = new QSimpleTypes("entity2");
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(entity.ddouble.divide(entity2.ddouble).loe(2.0))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(entity.ddouble.divide(entity2.ddouble).loe(2.0))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(entity.ddouble.divide(entity2.iint).loe(2.0))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(entity.ddouble.divide(entity2.iint).loe(2.0))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(entity.iint.divide(entity2.ddouble).loe(2.0))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(entity.iint.divide(entity2.ddouble).loe(2.0))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(entity.iint.divide(entity2.iint).loe(2))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(entity.iint.divide(entity2.iint).loe(2))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
@@ -851,65 +938,70 @@ public abstract class AbstractJPATest {
     NumberPath<BigDecimal> bigd1 = entity.bigDecimal;
     NumberPath<BigDecimal> bigd2 = entity2.bigDecimal;
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(bigd1.divide(bigd2).loe(new BigDecimal("1.00")))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(bigd1.divide(bigd2).loe(new BigDecimal("1.00")))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(entity.ddouble.divide(bigd2).loe(new BigDecimal("1.00")))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(entity.ddouble.divide(bigd2).loe(new BigDecimal("1.00")))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(bigd1.divide(entity.ddouble).loe(new BigDecimal("1.00")))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(bigd1.divide(entity.ddouble).loe(new BigDecimal("1.00")))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
   public void endsWith() {
-    assertEquals(1, query().from(cat).where(cat.name.endsWith("h123")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.endsWith("h123")).fetchCount()).isEqualTo(1);
   }
 
   @Test
   public void endsWith_ignoreCase() {
-    assertEquals(1, query().from(cat).where(cat.name.endsWithIgnoreCase("H123")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.endsWithIgnoreCase("H123")).fetchCount())
+        .isEqualTo(1);
   }
 
   @Test
   public void endsWith2() {
-    assertEquals(0, query().from(cat).where(cat.name.endsWith("X")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.endsWith("X")).fetchCount()).isEqualTo(0);
   }
 
   @Test
   public void endsWith3() {
-    assertEquals(1, query().from(cat).where(cat.name.endsWith("_123")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.endsWith("_123")).fetchCount()).isEqualTo(1);
   }
 
   @Test
   @NoBatooJPA
   public void enum_eq() {
-    assertEquals(1, query().from(company).where(company.ratingOrdinal.eq(Rating.A)).fetchCount());
-    assertEquals(1, query().from(company).where(company.ratingString.eq(Rating.AA)).fetchCount());
+    assertThat(query().from(company).where(company.ratingOrdinal.eq(Rating.A)).fetchCount())
+        .isEqualTo(1);
+    assertThat(query().from(company).where(company.ratingString.eq(Rating.AA)).fetchCount())
+        .isEqualTo(1);
   }
 
   @Test
   @NoBatooJPA
   public void enum_in() {
-    assertEquals(
-        1, query().from(company).where(company.ratingOrdinal.in(Rating.A, Rating.AA)).fetchCount());
-    assertEquals(
-        1, query().from(company).where(company.ratingString.in(Rating.A, Rating.AA)).fetchCount());
+    assertThat(
+            query().from(company).where(company.ratingOrdinal.in(Rating.A, Rating.AA)).fetchCount())
+        .isEqualTo(1);
+    assertThat(
+            query().from(company).where(company.ratingString.in(Rating.A, Rating.AA)).fetchCount())
+        .isEqualTo(1);
   }
 
   @Test
@@ -921,18 +1013,18 @@ public abstract class AbstractJPATest {
     query
         .from(employee)
         .where(employee.lastName.eq("Smith"), employee.jobFunctions.contains(JobFunction.CODER));
-    assertEquals(1L, query.fetchCount());
+    assertThat(query.fetchCount()).isEqualTo(1L);
   }
 
   @Test
   @ExcludeIn(SQLSERVER)
   public void enum_startsWith() {
-    assertEquals(
-        1,
-        query()
-            .from(company)
-            .where(company.ratingString.stringValue().startsWith("A"))
-            .fetchCount());
+    assertThat(
+            query()
+                .from(company)
+                .where(company.ratingString.stringValue().startsWith("A"))
+                .fetchCount())
+        .isEqualTo(1);
   }
 
   @Test
@@ -947,8 +1039,8 @@ public abstract class AbstractJPATest {
             .leftJoin(cat.mate, cat2)
             .leftJoin(cat2.kittens, kitten)
             .select(Projections.tuple(cat.id, new QFamily(cat, cat2, kitten).skipNulls()));
-    assertEquals(6, query.fetch().size());
-    assertNotNull(query.limit(1).fetchOne());
+    assertThat(query.fetch()).hasSize(6);
+    assertThat(query.limit(1).fetchOne()).isNotNull();
   }
 
   @Test
@@ -1019,12 +1111,12 @@ public abstract class AbstractJPATest {
     //        select cat0_.name as col_0_0_, cat0_.breed as col_1_0_, sum(cat0_.bodyWeight) as
     // col_2_0_
     //        from animal_ cat0_ where cat0_.DTYPE in ('C', 'DC') and cat0_.bodyWeight>?
-    //        group by cat0_.name , cat0_.breed
+    //        group by cat0_.name, cat0_.breed
     query()
         .from(cat)
         .where(cat.bodyWeight.gt(0))
         .groupBy(cat.name, cat.breed)
-        .select(cat.name, cat.breed, cat.bodyWeight.sum())
+        .select(cat.name, cat.breed, cat.bodyWeight.sumDouble())
         .fetch();
   }
 
@@ -1048,10 +1140,10 @@ public abstract class AbstractJPATest {
         query().from(cat).groupBy(cat.id).limit(1).select(cat.id).fetchResults();
 
     long catCount = query().from(cat).fetchCount();
-    assertEquals(catCount, ids.size());
-    assertEquals(catCount, count);
-    assertEquals(catCount, results.getResults().size());
-    assertEquals(catCount, results.getTotal());
+    assertThat(ids).hasSize((int) catCount);
+    assertThat(count).isEqualTo(catCount);
+    assertThat(results.getResults()).hasSize((int) catCount);
+    assertThat(results.getTotal()).isEqualTo(catCount);
   }
 
   @Test
@@ -1068,9 +1160,9 @@ public abstract class AbstractJPATest {
             .select(Expressions.ONE)
             .fetchResults();
 
-    assertEquals(1, ids.size());
-    assertEquals(1, results.getResults().size());
-    assertEquals(1, results.getTotal());
+    assertThat(ids).hasSize(1);
+    assertThat(results.getResults()).hasSize(1);
+    assertThat(results.getTotal()).isEqualTo(1);
   }
 
   @Test
@@ -1078,66 +1170,67 @@ public abstract class AbstractJPATest {
   public void groupBy_select() {
     // select length(my_column) as column_size from my_table group by column_size
     NumberPath<Integer> length = Expressions.numberPath(Integer.class, "len");
-    assertEquals(
-        Arrays.asList(4, 6, 7, 8),
-        query()
-            .select(cat.name.length().as(length))
-            .from(cat)
-            .orderBy(length.asc())
-            .groupBy(length)
-            .fetch());
+    assertThat(
+            query()
+                .select(cat.name.length().as(length))
+                .from(cat)
+                .orderBy(length.asc())
+                .groupBy(length)
+                .fetch())
+        .isEqualTo(Arrays.asList(4, 6, 7, 8));
   }
 
   @Test
   public void groupBy_results() {
     QueryResults<Integer> results = query().from(cat).groupBy(cat.id).select(cat.id).fetchResults();
-    assertEquals(6, results.getTotal());
-    assertEquals(6, results.getResults().size());
+    assertThat(results.getTotal()).isEqualTo(6);
+    assertThat(results.getResults()).hasSize(6);
   }
 
   @Test
   public void groupBy_results2() {
     QueryResults<Integer> results =
         query().from(cat).groupBy(cat.birthdate).select(cat.id.max()).fetchResults();
-    assertEquals(1, results.getTotal());
-    assertEquals(1, results.getResults().size());
+    assertThat(results.getTotal()).isEqualTo(1);
+    assertThat(results.getResults()).hasSize(1);
   }
 
   @Test
   public void in() {
-    assertEquals(
-        3L, query().from(cat).where(cat.name.in("Bob123", "Ruth123", "Felix123")).fetchCount());
-    assertEquals(3L, query().from(cat).where(cat.id.in(Arrays.asList(1, 2, 3))).fetchCount());
-    assertEquals(
-        0L, query().from(cat).where(cat.name.in(Arrays.asList("A", "B", "C"))).fetchCount());
+    assertThat(query().from(cat).where(cat.name.in("Bob123", "Ruth123", "Felix123")).fetchCount())
+        .isEqualTo(3L);
+    assertThat(query().from(cat).where(cat.id.in(Arrays.asList(1, 2, 3))).fetchCount())
+        .isEqualTo(3L);
+    assertThat(query().from(cat).where(cat.name.in(Arrays.asList("A", "B", "C"))).fetchCount())
+        .isEqualTo(0L);
   }
 
   @Test
   public void in2() {
-    assertEquals(3L, query().from(cat).where(cat.id.in(1, 2, 3)).fetchCount());
-    assertEquals(0L, query().from(cat).where(cat.name.in("A", "B", "C")).fetchCount());
+    assertThat(query().from(cat).where(cat.id.in(1, 2, 3)).fetchCount()).isEqualTo(3L);
+    assertThat(query().from(cat).where(cat.name.in("A", "B", "C")).fetchCount()).isEqualTo(0L);
   }
 
   @Test
   public void in3() {
-    assertEquals(0, query().from(cat).where(cat.name.in("A,B,C".split(","))).fetchCount());
+    assertThat(query().from(cat).where(cat.name.in("A,B,C".split(","))).fetchCount()).isEqualTo(0);
   }
 
   @Test
   public void in4() {
     // $.parameterRelease.id.eq(releaseId).and($.parameterGroups.any().id.in(filter.getGroups()));
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(cat)
-            .where(cat.id.eq(1), cat.kittens.any().id.in(1, 2, 3))
-            .select(cat)
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.id.eq(1), cat.kittens.any().id.in(1, 2, 3))
+                .select(cat)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
   public void in5() {
-    assertEquals(4L, query().from(cat).where(cat.mate.in(savedCats)).fetchCount());
+    assertThat(query().from(cat).where(cat.mate.in(savedCats)).fetchCount()).isEqualTo(4L);
   }
 
   @Test
@@ -1148,62 +1241,75 @@ public abstract class AbstractJPATest {
 
   @Test
   public void in7() {
-    assertEquals(4L, query().from(cat).where(cat.kittens.any().in(savedCats)).fetchCount());
+    assertThat(query().from(cat).where(cat.kittens.any().in(savedCats)).fetchCount()).isEqualTo(4L);
   }
 
   @Test
   public void in_empty() {
-    assertEquals(0, query().from(cat).where(cat.name.in(Collections.emptyList())).fetchCount());
+    assertThat(query().from(cat).where(cat.name.in(Collections.emptyList())).fetchCount())
+        .isEqualTo(0);
   }
 
   @Test
   @NoOpenJPA
   public void indexOf() {
-    assertEquals(
-        Integer.valueOf(0),
-        query().from(cat).where(cat.name.eq("Bob123")).select(cat.name.indexOf("B")).fetchFirst());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.name.eq("Bob123"))
+                .select(cat.name.indexOf("B"))
+                .fetchFirst())
+        .isEqualTo(Integer.valueOf(0));
   }
 
   @Test
   @NoOpenJPA
   public void indexOf2() {
-    assertEquals(
-        Integer.valueOf(1),
-        query().from(cat).where(cat.name.eq("Bob123")).select(cat.name.indexOf("o")).fetchFirst());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.name.eq("Bob123"))
+                .select(cat.name.indexOf("o"))
+                .fetchFirst())
+        .isEqualTo(Integer.valueOf(1));
   }
 
   @Test
   public void instanceOf_cat() {
-    assertEquals(6L, query().from(cat).where(cat.instanceOf(Cat.class)).fetchCount());
+    assertThat(query().from(cat).where(cat.instanceOf(Cat.class)).fetchCount()).isEqualTo(6L);
   }
 
   @Test
   public void instanceOf_domesticCat() {
-    assertEquals(0L, query().from(cat).where(cat.instanceOf(DomesticCat.class)).fetchCount());
+    assertThat(query().from(cat).where(cat.instanceOf(DomesticCat.class)).fetchCount())
+        .isEqualTo(0L);
   }
 
   @Test
   public void instanceOf_entity1() {
     QEntity1 entity1 = QEntity1.entity1;
-    assertEquals(2L, query().from(entity1).where(entity1.instanceOf(Entity1.class)).fetchCount());
+    assertThat(query().from(entity1).where(entity1.instanceOf(Entity1.class)).fetchCount())
+        .isEqualTo(2L);
   }
 
   @Test
   public void instanceOf_entity2() {
     QEntity1 entity1 = QEntity1.entity1;
-    assertEquals(1L, query().from(entity1).where(entity1.instanceOf(Entity2.class)).fetchCount());
+    assertThat(query().from(entity1).where(entity1.instanceOf(Entity2.class)).fetchCount())
+        .isEqualTo(1L);
   }
 
   @Test
   @NoHibernate // https://hibernate.atlassian.net/browse/HHH-6686
   public void isEmpty_elementCollection() {
     QEmployee employee = QEmployee.employee;
-    assertEquals(0, query().from(employee).where(employee.jobFunctions.isEmpty()).fetchCount());
+    assertThat(query().from(employee).where(employee.jobFunctions.isEmpty()).fetchCount())
+        .isEqualTo(0);
   }
 
   @Test
   public void isEmpty_relation() {
-    assertEquals(6L, query().from(cat).where(cat.kittensSet.isEmpty()).fetchCount());
+    assertThat(query().from(cat).where(cat.kittensSet.isEmpty()).fetchCount()).isEqualTo(6L);
   }
 
   @Test
@@ -1213,54 +1319,53 @@ public abstract class AbstractJPATest {
     QBookVersion bookVersion = QBookVersion.bookVersion;
     QBookMark bookMark = QBookMark.bookMark;
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(bookVersion)
-            .join(bookVersion.definition.bookMarks, bookMark)
-            .where(
-                bookVersion.definition.bookMarks.size().eq(1),
-                bookMark.page.eq(2357L).or(bookMark.page.eq(2356L)))
-            .select(bookVersion)
-            .fetch());
+    assertThat(
+            query()
+                .from(bookVersion)
+                .join(bookVersion.definition.bookMarks, bookMark)
+                .where(
+                    bookVersion.definition.bookMarks.size().eq(1),
+                    bookMark.page.eq(2357L).or(bookMark.page.eq(2356L)))
+                .select(bookVersion)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
   public void length() {
-    assertEquals(6, query().from(cat).where(cat.name.length().gt(0)).fetchCount());
+    assertThat(query().from(cat).where(cat.name.length().gt(0)).fetchCount()).isEqualTo(6);
   }
 
   @Test
   public void like() {
-    assertEquals(0, query().from(cat).where(cat.name.like("!")).fetchCount());
-    assertEquals(0, query().from(cat).where(cat.name.like("\\")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.like("!")).fetchCount()).isEqualTo(0);
+    assertThat(query().from(cat).where(cat.name.like("\\")).fetchCount()).isEqualTo(0);
   }
 
   @Test
   public void limit() {
     List<String> names1 = Arrays.asList("Allen123", "Bob123");
-    assertEquals(
-        names1, query().from(cat).orderBy(cat.name.asc()).limit(2).select(cat.name).fetch());
+    assertThat(query().from(cat).orderBy(cat.name.asc()).limit(2).select(cat.name).fetch())
+        .isEqualTo(names1);
   }
 
   @Test
   public void limit_and_offset() {
     List<String> names3 = Arrays.asList("Felix123", "Mary_123");
-    assertEquals(
-        names3,
-        query().from(cat).orderBy(cat.name.asc()).limit(2).offset(2).select(cat.name).fetch());
+    assertThat(
+            query().from(cat).orderBy(cat.name.asc()).limit(2).offset(2).select(cat.name).fetch())
+        .isEqualTo(names3);
   }
 
   @Test
   public void limit2() {
-    assertEquals(
-        Collections.singletonList("Allen123"),
-        query().from(cat).orderBy(cat.name.asc()).limit(1).select(cat.name).fetch());
+    assertThat(query().from(cat).orderBy(cat.name.asc()).limit(1).select(cat.name).fetch())
+        .isEqualTo(Collections.singletonList("Allen123"));
   }
 
   @Test
   public void limit3() {
-    assertEquals(6, query().from(cat).limit(Long.MAX_VALUE).select(cat).fetch().size());
+    assertThat(query().from(cat).limit(Long.MAX_VALUE).select(cat).fetch()).hasSize(6);
   }
 
   @Test
@@ -1275,7 +1380,7 @@ public abstract class AbstractJPATest {
             .innerJoin(employee.jobFunctions, jobFunction)
             .select(jobFunction)
             .fetch();
-    assertEquals(4, jobFunctions.size());
+    assertThat(jobFunctions).hasSize(4);
   }
 
   @Test
@@ -1285,44 +1390,44 @@ public abstract class AbstractJPATest {
     StringPath str = Expressions.stringPath("str");
 
     List<String> strings = query().from(foo).innerJoin(foo.names, str).select(str).fetch();
-    assertEquals(2, strings.size());
-    assertTrue(strings.contains("a"));
-    assertTrue(strings.contains("b"));
+    assertThat(strings).hasSize(2);
+    assertThat(strings).contains("a");
+    assertThat(strings).contains("b");
   }
 
   @Test
   @NoEclipseLink(HSQLDB)
   public void list_order_get() {
     QCat cat = QCat.cat;
-    assertEquals(6, query().from(cat).orderBy(cat.kittens.get(0).name.asc()).fetch().size());
+    assertThat(query().from(cat).orderBy(cat.kittens.get(0).name.asc()).fetch()).hasSize(6);
   }
 
   @Test
   @NoEclipseLink(HSQLDB)
   public void list_order_get2() {
     QCat cat = QCat.cat;
-    assertEquals(6, query().from(cat).orderBy(cat.mate.kittens.get(0).name.asc()).fetch().size());
+    assertThat(query().from(cat).orderBy(cat.mate.kittens.get(0).name.asc()).fetch()).hasSize(6);
   }
 
   @Test
   public void map_get() {
     QShow show = QShow.show;
-    assertEquals(
-        Collections.singletonList("A"), query().from(show).select(show.acts.get("a")).fetch());
+    assertThat(query().from(show).select(show.acts.get("a")).fetch())
+        .isEqualTo(Collections.singletonList("A"));
   }
 
   @Test
   @NoHibernate
   public void map_get2() {
     QShow show = QShow.show;
-    assertEquals(1, query().from(show).where(show.acts.get("a").eq("A")).fetchCount());
+    assertThat(query().from(show).where(show.acts.get("a").eq("A")).fetchCount()).isEqualTo(1);
   }
 
   @Test
   @NoEclipseLink
   public void map_order_get() {
     QShow show = QShow.show;
-    assertEquals(1, query().from(show).orderBy(show.parent.acts.get("A").asc()).fetch().size());
+    assertThat(query().from(show).orderBy(show.parent.acts.get("A").asc()).fetch()).hasSize(1);
   }
 
   @Test
@@ -1330,64 +1435,64 @@ public abstract class AbstractJPATest {
   public void map_order_get2() {
     QShow show = QShow.show;
     QShow parent = new QShow("parent");
-    assertEquals(
-        1,
-        query()
-            .from(show)
-            .leftJoin(show.parent, parent)
-            .orderBy(parent.acts.get("A").asc())
-            .fetch()
-            .size());
+    assertThat(
+            query()
+                .from(show)
+                .leftJoin(show.parent, parent)
+                .orderBy(parent.acts.get("A").asc())
+                .fetch())
+        .hasSize(1);
   }
 
   @Test
   public void map_containsKey() {
     QShow show = QShow.show;
-    assertEquals(1L, query().from(show).where(show.acts.containsKey("a")).fetchCount());
+    assertThat(query().from(show).where(show.acts.containsKey("a")).fetchCount()).isEqualTo(1L);
   }
 
   @Test
   public void map_containsKey2() {
     QShow show = QShow.show;
-    assertEquals(1L, query().from(show).where(show.acts.containsKey("b")).fetchCount());
+    assertThat(query().from(show).where(show.acts.containsKey("b")).fetchCount()).isEqualTo(1L);
   }
 
   @Test
   public void map_containsKey3() {
     QShow show = QShow.show;
-    assertEquals(0L, query().from(show).where(show.acts.containsKey("c")).fetchCount());
+    assertThat(query().from(show).where(show.acts.containsKey("c")).fetchCount()).isEqualTo(0L);
   }
 
   @Test
   public void map_containsValue() {
     QShow show = QShow.show;
-    assertEquals(1L, query().from(show).where(show.acts.containsValue("A")).fetchCount());
+    assertThat(query().from(show).where(show.acts.containsValue("A")).fetchCount()).isEqualTo(1L);
   }
 
   @Test
   public void map_containsValue2() {
     QShow show = QShow.show;
-    assertEquals(1L, query().from(show).where(show.acts.containsValue("B")).fetchCount());
+    assertThat(query().from(show).where(show.acts.containsValue("B")).fetchCount()).isEqualTo(1L);
   }
 
   @Test
   public void map_containsValue3() {
     QShow show = QShow.show;
-    assertEquals(0L, query().from(show).where(show.acts.containsValue("C")).fetchCount());
+    assertThat(query().from(show).where(show.acts.containsValue("C")).fetchCount()).isEqualTo(0L);
   }
 
   @Test
   public void map_contains() {
     QShow show = QShow.show;
-    assertEquals(1L, query().from(show).where(show.acts.contains("a", "A")).fetchCount());
-    assertEquals(0L, query().from(show).where(show.acts.contains("X", "X")).fetchCount());
+    assertThat(query().from(show).where(show.acts.contains("a", "A")).fetchCount()).isEqualTo(1L);
+    assertThat(query().from(show).where(show.acts.contains("X", "X")).fetchCount()).isEqualTo(0L);
   }
 
   @Test
   public void map_groupBy() {
     QShow show = QShow.show;
-    assertEquals(
-        1, query().from(show).select(show.acts.get("X")).groupBy(show.acts.get("a")).fetchCount());
+    assertThat(
+            query().from(show).select(show.acts.get("X")).groupBy(show.acts.get("a")).fetchCount())
+        .isEqualTo(1);
   }
 
   @Test
@@ -1396,18 +1501,20 @@ public abstract class AbstractJPATest {
     // select m.text from Show s join s.acts a where key(a) = 'B'
     QShow show = QShow.show;
     StringPath act = Expressions.stringPath("act");
-    assertEquals(
-        Collections.emptyList(), query().from(show).join(show.acts, act).select(act).fetch());
+    assertThat(query().from(show).join(show.acts, act).select(act).fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
   public void max() {
-    assertEquals(6.0, query().from(cat).select(cat.bodyWeight.max()).fetchFirst(), 0.0001);
+    assertThat(query().from(cat).select(cat.bodyWeight.max()).fetchFirst())
+        .isCloseTo(6.0, within(0.0001));
   }
 
   @Test
   public void min() {
-    assertEquals(1.0, query().from(cat).select(cat.bodyWeight.min()).fetchFirst(), 0.0001);
+    assertThat(query().from(cat).select(cat.bodyWeight.min()).fetchFirst())
+        .isCloseTo(1.0, within(0.0001));
   }
 
   @Test
@@ -1416,13 +1523,13 @@ public abstract class AbstractJPATest {
     QSimpleTypes entity = new QSimpleTypes("entity1");
     QSimpleTypes entity2 = new QSimpleTypes("entity2");
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(entity.ddouble.multiply(entity2.ddouble).loe(2.0))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(entity.ddouble.multiply(entity2.ddouble).loe(2.0))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
@@ -1433,53 +1540,54 @@ public abstract class AbstractJPATest {
     NumberPath<BigDecimal> bigd1 = entity.bigDecimal;
     NumberPath<BigDecimal> bigd2 = entity2.bigDecimal;
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(bigd1.multiply(bigd2).loe(new BigDecimal("1.00")))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(bigd1.multiply(bigd2).loe(new BigDecimal("1.00")))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
   public void nestedProjection() {
     Concatenation concat = new Concatenation(cat.name, cat.name);
     List<Tuple> tuples = query().from(cat).select(cat.name, concat).fetch();
-    assertFalse(tuples.isEmpty());
+    assertThat(tuples).isNotEmpty();
     for (Tuple tuple : tuples) {
-      assertEquals(tuple.get(concat), tuple.get(cat.name) + tuple.get(cat.name));
+      assertThat(tuple.get(cat.name) + tuple.get(cat.name)).isEqualTo(tuple.get(concat));
     }
   }
 
   @Test
   public void not_in() {
     long all = query().from(cat).fetchCount();
-    assertEquals(
-        all - 3L,
-        query().from(cat).where(cat.name.notIn("Bob123", "Ruth123", "Felix123")).fetchCount());
+    assertThat(
+            query().from(cat).where(cat.name.notIn("Bob123", "Ruth123", "Felix123")).fetchCount())
+        .isEqualTo(all - 3L);
 
-    assertEquals(3L, query().from(cat).where(cat.id.notIn(1, 2, 3)).fetchCount());
-    assertEquals(6L, query().from(cat).where(cat.name.notIn("A", "B", "C")).fetchCount());
+    assertThat(query().from(cat).where(cat.id.notIn(1, 2, 3)).fetchCount()).isEqualTo(3L);
+    assertThat(query().from(cat).where(cat.name.notIn("A", "B", "C")).fetchCount()).isEqualTo(6L);
   }
 
   @Test
   @NoBatooJPA
   public void not_in_empty() {
     long count = query().from(cat).fetchCount();
-    assertEquals(
-        count,
-        query().from(cat).where(cat.name.notIn(Collections.<String>emptyList())).fetchCount());
+    assertThat(
+            query().from(cat).where(cat.name.notIn(Collections.<String>emptyList())).fetchCount())
+        .isEqualTo(count);
   }
 
   @Test
   public void null_as_uniqueResult() {
-    assertNull(
-        query()
-            .from(cat)
-            .where(cat.name.eq(UUID.randomUUID().toString()))
-            .select(cat)
-            .fetchFirst());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.name.eq(UUID.randomUUID().toString()))
+                .select(cat)
+                .fetchFirst())
+        .isNull();
   }
 
   @Test
@@ -1487,7 +1595,7 @@ public abstract class AbstractJPATest {
   public void numeric() {
     QNumeric numeric = QNumeric.numeric;
     BigDecimal singleResult = query().from(numeric).select(numeric.value).fetchFirst();
-    assertEquals(26.9, singleResult.doubleValue(), 0.001);
+    assertThat(singleResult.doubleValue()).isCloseTo(26.9, within(0.001));
   }
 
   @Test
@@ -1495,8 +1603,8 @@ public abstract class AbstractJPATest {
   @NoBatooJPA // FIXME
   public void offset1() {
     List<String> names2 = Arrays.asList("Bob123", "Felix123", "Mary_123", "Ruth123", "Some");
-    assertEquals(
-        names2, query().from(cat).orderBy(cat.name.asc()).offset(1).select(cat.name).fetch());
+    assertThat(query().from(cat).orderBy(cat.name.asc()).offset(1).select(cat.name).fetch())
+        .isEqualTo(names2);
   }
 
   @Test
@@ -1504,8 +1612,8 @@ public abstract class AbstractJPATest {
   @NoBatooJPA // FIXME
   public void offset2() {
     List<String> names2 = Arrays.asList("Felix123", "Mary_123", "Ruth123", "Some");
-    assertEquals(
-        names2, query().from(cat).orderBy(cat.name.asc()).offset(2).select(cat.name).fetch());
+    assertThat(query().from(cat).orderBy(cat.name.asc()).offset(2).select(cat.name).fetch())
+        .isEqualTo(names2);
   }
 
   @Test
@@ -1522,9 +1630,8 @@ public abstract class AbstractJPATest {
   @Test
   public void order() {
     NumberPath<Double> weight = Expressions.numberPath(Double.class, "weight");
-    assertEquals(
-        Arrays.asList(1.0, 2.0, 3.0, 4.0, 5.0, 6.0),
-        query().from(cat).orderBy(weight.asc()).select(cat.bodyWeight.as(weight)).fetch());
+    assertThat(query().from(cat).orderBy(weight.asc()).select(cat.bodyWeight.as(weight)).fetch())
+        .isEqualTo(Arrays.asList(1.0, 2.0, 3.0, 4.0, 5.0, 6.0));
   }
 
   @Test
@@ -1541,107 +1648,106 @@ public abstract class AbstractJPATest {
   @Test
   public void order_stringValue() {
     int count = (int) query().from(cat).fetchCount();
-    assertEquals(
-        count, query().from(cat).orderBy(cat.id.stringValue().asc()).select(cat).fetch().size());
+    assertThat(query().from(cat).orderBy(cat.id.stringValue().asc()).select(cat).fetch())
+        .hasSize(count);
   }
 
   @Test
   @NoBatooJPA // can't be parsed
   public void order_stringValue_to_integer() {
     int count = (int) query().from(cat).fetchCount();
-    assertEquals(
-        count,
-        query()
-            .from(cat)
-            .orderBy(cat.id.stringValue().castToNum(Integer.class).asc())
-            .select(cat)
-            .fetch()
-            .size());
+    assertThat(
+            query()
+                .from(cat)
+                .orderBy(cat.id.stringValue().castToNum(Integer.class).asc())
+                .select(cat)
+                .fetch())
+        .hasSize(count);
   }
 
   @Test
   @NoBatooJPA // can't be parsed
   public void order_stringValue_toLong() {
     int count = (int) query().from(cat).fetchCount();
-    assertEquals(
-        count,
-        query()
-            .from(cat)
-            .orderBy(cat.id.stringValue().castToNum(Long.class).asc())
-            .select(cat)
-            .fetch()
-            .size());
+    assertThat(
+            query()
+                .from(cat)
+                .orderBy(cat.id.stringValue().castToNum(Long.class).asc())
+                .select(cat)
+                .fetch())
+        .hasSize(count);
   }
 
   @Test
   @NoBatooJPA // can't be parsed
   public void order_stringValue_toBigInteger() {
     int count = (int) query().from(cat).fetchCount();
-    assertEquals(
-        count,
-        query()
-            .from(cat)
-            .orderBy(cat.id.stringValue().castToNum(BigInteger.class).asc())
-            .select(cat)
-            .fetch()
-            .size());
+    assertThat(
+            query()
+                .from(cat)
+                .orderBy(cat.id.stringValue().castToNum(BigInteger.class).asc())
+                .select(cat)
+                .fetch())
+        .hasSize(count);
   }
 
   @Test
   @NoBatooJPA
   @ExcludeIn(SQLSERVER)
   public void order_nullsFirst() {
-    assertNull(
-        query()
-            .from(cat)
-            .orderBy(cat.dateField.asc().nullsFirst())
-            .select(cat.dateField)
-            .fetchFirst());
+    assertThat(
+            query()
+                .from(cat)
+                .orderBy(cat.dateField.asc().nullsFirst())
+                .select(cat.dateField)
+                .fetchFirst())
+        .isNull();
   }
 
   @Test
   @NoBatooJPA
   @ExcludeIn(SQLSERVER)
   public void order_nullsLast() {
-    assertNotNull(
-        query()
-            .from(cat)
-            .orderBy(cat.dateField.asc().nullsLast())
-            .select(cat.dateField)
-            .fetchFirst());
+    assertThat(
+            query()
+                .from(cat)
+                .orderBy(cat.dateField.asc().nullsLast())
+                .select(cat.dateField)
+                .fetchFirst())
+        .isNotNull();
   }
 
   @Test
   public void params() {
     Param<String> name = new Param<String>(String.class, "name");
-    assertEquals(
-        "Bob123",
-        query()
-            .from(cat)
-            .where(cat.name.eq(name))
-            .set(name, "Bob123")
-            .select(cat.name)
-            .fetchFirst());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.name.eq(name))
+                .set(name, "Bob123")
+                .select(cat.name)
+                .fetchFirst())
+        .isEqualTo("Bob123");
   }
 
   @Test
   public void params_anon() {
     Param<String> name = new Param<String>(String.class);
-    assertEquals(
-        "Bob123",
-        query()
-            .from(cat)
-            .where(cat.name.eq(name))
-            .set(name, "Bob123")
-            .select(cat.name)
-            .fetchFirst());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.name.eq(name))
+                .set(name, "Bob123")
+                .select(cat.name)
+                .fetchFirst())
+        .isEqualTo("Bob123");
   }
 
   @Test(expected = ParamNotSetException.class)
   public void params_not_set() {
     Param<String> name = new Param<String>(String.class, "name");
-    assertEquals(
-        "Bob123", query().from(cat).where(cat.name.eq(name)).select(cat.name).fetchFirst());
+    assertThat(query().from(cat).where(cat.name.eq(name)).select(cat.name).fetchFirst())
+        .isEqualTo("Bob123");
   }
 
   @Test
@@ -1649,7 +1755,7 @@ public abstract class AbstractJPATest {
     StringPath str = cat.name;
     Predicate where =
         str.like("Bob%").and(str.like("%ob123")).or(str.like("Ruth%").and(str.like("%uth123")));
-    assertEquals(2L, query().from(cat).where(where).fetchCount());
+    assertThat(query().from(cat).where(where).fetchCount()).isEqualTo(2L);
   }
 
   @Test
@@ -1657,20 +1763,20 @@ public abstract class AbstractJPATest {
     StringPath str = cat.name;
     Predicate where =
         str.like("Bob%").and(str.like("%ob123").or(str.like("Ruth%"))).and(str.like("%uth123"));
-    assertEquals(0L, query().from(cat).where(where).fetchCount());
+    assertThat(query().from(cat).where(where).fetchCount()).isEqualTo(0L);
   }
 
   @Test
   public void precedence3() {
     Predicate where =
         cat.name.eq("Bob123").and(cat.id.eq(1)).or(cat.name.eq("Ruth123").and(cat.id.eq(2)));
-    assertEquals(2L, query().from(cat).where(where).fetchCount());
+    assertThat(query().from(cat).where(where).fetchCount()).isEqualTo(2L);
   }
 
   @Test
   public void factoryExpression_in_groupBy() {
     Expression<Cat> catBean = Projections.bean(Cat.class, cat.id, cat.name);
-    assertFalse(query().from(cat).groupBy(catBean).select(catBean).fetch().isEmpty());
+    assertThat(query().from(cat).groupBy(catBean).select(catBean).fetch()).isNotEmpty();
   }
 
   @Test
@@ -1682,22 +1788,23 @@ public abstract class AbstractJPATest {
 
   @Test
   public void startsWith() {
-    assertEquals(1, query().from(cat).where(cat.name.startsWith("R")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.startsWith("R")).fetchCount()).isEqualTo(1);
   }
 
   @Test
   public void startsWith_ignoreCase() {
-    assertEquals(1, query().from(cat).where(cat.name.startsWithIgnoreCase("r")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.startsWithIgnoreCase("r")).fetchCount())
+        .isEqualTo(1);
   }
 
   @Test
   public void startsWith2() {
-    assertEquals(0, query().from(cat).where(cat.name.startsWith("X")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.startsWith("X")).fetchCount()).isEqualTo(0);
   }
 
   @Test
   public void startsWith3() {
-    assertEquals(1, query().from(cat).where(cat.name.startsWith("Mary_")).fetchCount());
+    assertThat(query().from(cat).where(cat.name.startsWith("Mary_")).fetchCount()).isEqualTo(1);
   }
 
   @Test
@@ -1705,50 +1812,56 @@ public abstract class AbstractJPATest {
   @NoOpenJPA
   public void stringOperations() {
     // NOTE : locate in MYSQL is case-insensitive
-    assertEquals(0, query().from(cat).where(cat.name.startsWith("r")).fetchCount());
-    assertEquals(0, query().from(cat).where(cat.name.endsWith("H123")).fetchCount());
-    assertEquals(
-        Integer.valueOf(2),
-        query().from(cat).where(cat.name.eq("Bob123")).select(cat.name.indexOf("b")).fetchFirst());
+    assertThat(query().from(cat).where(cat.name.startsWith("r")).fetchCount()).isEqualTo(0);
+    assertThat(query().from(cat).where(cat.name.endsWith("H123")).fetchCount()).isEqualTo(0);
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.name.eq("Bob123"))
+                .select(cat.name.indexOf("b"))
+                .fetchFirst())
+        .isEqualTo(Integer.valueOf(2));
   }
 
   @Test
   public void subQuery() {
     QShow show = QShow.show;
     QShow show2 = new QShow("show2");
-    assertEquals(
-        0,
-        query()
-            .from(show)
-            .where(select(show2.count()).from(show2).where(show2.id.ne(show.id)).gt(0L))
-            .fetchCount());
+    assertThat(
+            query()
+                .from(show)
+                .where(select(show2.count()).from(show2).where(show2.id.ne(show.id)).gt(0L))
+                .fetchCount())
+        .isEqualTo(0);
   }
 
   @Test
   public void subQuery2() {
     QCat cat = QCat.cat;
     QCat other = new QCat("other");
-    assertEquals(
-        savedCats,
-        query()
-            .from(cat)
-            .where(cat.name.in(select(other.name).from(other).groupBy(other.name)))
-            .orderBy(cat.id.asc())
-            .select(cat)
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.name.in(select(other.name).from(other).groupBy(other.name)))
+                .orderBy(cat.id.asc())
+                .select(cat)
+                .fetch())
+        .isEqualTo(savedCats);
   }
 
   @Test
   public void subQuery3() {
     QCat cat = QCat.cat;
     QCat other = new QCat("other");
-    assertEquals(
-        savedCats.subList(0, 1),
-        query()
-            .from(cat)
-            .where(cat.name.eq(select(other.name).from(other).where(other.name.indexOf("B").eq(0))))
-            .select(cat)
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .where(
+                    cat.name.eq(
+                        select(other.name).from(other).where(other.name.indexOf("B").eq(0))))
+                .select(cat)
+                .fetch())
+        .isEqualTo(savedCats.subList(0, 1));
   }
 
   @Test
@@ -1765,24 +1878,24 @@ public abstract class AbstractJPATest {
   public void subQuery5() {
     QEmployee employee = QEmployee.employee;
     QEmployee employee2 = new QEmployee("e2");
-    assertEquals(
-        2,
-        query()
-            .from(employee)
-            .where(select(employee2.id.count()).from(employee2).gt(1L))
-            .fetchCount());
+    assertThat(
+            query()
+                .from(employee)
+                .where(select(employee2.id.count()).from(employee2).gt(1L))
+                .fetchCount())
+        .isEqualTo(2);
   }
 
   @Test
   public void substring() {
     for (String str : query().from(cat).select(cat.name.substring(1, 2)).fetch()) {
-      assertEquals(1, str.length());
+      assertThat(str).hasSize(1);
     }
   }
 
   @Test
   @NoBatooJPA
-  @ExcludeIn({ORACLE, SQLSERVER})
+  @ExcludeIn({ORACLE, SQLSERVER, HSQLDB})
   public void substring2() {
     QCompany company = QCompany.company;
     StringExpression name = company.name;
@@ -1790,48 +1903,48 @@ public abstract class AbstractJPATest {
     JPQLQuery<?> query = query().from(company).where(company.id.eq(companyId));
     String str = query.select(company.name).fetchFirst();
 
-    assertEquals(Integer.valueOf(29), query.select(name.length().subtract(11)).fetchFirst());
+    assertThat(query.select(name.length().subtract(11)).fetchFirst())
+        .isEqualTo(Integer.valueOf(29));
 
-    assertEquals(str.substring(0, 7), query.select(name.substring(0, 7)).fetchFirst());
+    assertThat(query.select(name.substring(0, 7)).fetchFirst()).isEqualTo(str.substring(0, 7));
 
-    assertEquals(str.substring(15), query.select(name.substring(15)).fetchFirst());
+    assertThat(query.select(name.substring(15)).fetchFirst()).isEqualTo(str.substring(15));
 
-    assertEquals(
-        str.substring(str.length()), query.select(name.substring(name.length())).fetchFirst());
+    assertThat(query.select(name.substring(name.length())).fetchFirst())
+        .isEqualTo(str.substring(str.length()));
 
-    assertEquals(
-        str.substring(str.length() - 11),
-        query.select(name.substring(name.length().subtract(11))).fetchFirst());
+    assertThat(query.select(name.substring(name.length().subtract(11))).fetchFirst())
+        .isEqualTo(str.substring(str.length() - 11));
   }
 
   @Test
   @Ignore // FIXME
   @ExcludeIn(DERBY)
   public void substring_from_right() {
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(cat)
-            .where(cat.name.substring(-1, 1).eq(cat.name.substring(-2, 1)))
-            .select(cat)
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.name.substring(-1, 1).eq(cat.name.substring(-2, 1)))
+                .select(cat)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
   @ExcludeIn({HSQLDB, DERBY})
   public void substring_from_right2() {
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(cat)
-            .where(
-                cat.name
-                    .substring(cat.name.length().subtract(1), cat.name.length())
-                    .eq(
-                        cat.name.substring(
-                            cat.name.length().subtract(2), cat.name.length().subtract(1))))
-            .select(cat)
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .where(
+                    cat.name
+                        .substring(cat.name.length().subtract(1), cat.name.length())
+                        .eq(
+                            cat.name.substring(
+                                cat.name.length().subtract(2), cat.name.length().subtract(1))))
+                .select(cat)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
@@ -1842,65 +1955,66 @@ public abstract class AbstractJPATest {
     NumberPath<BigDecimal> bigd1 = entity.bigDecimal;
     NumberPath<BigDecimal> bigd2 = entity2.bigDecimal;
 
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(entity, entity2)
-            .where(bigd1.subtract(bigd2).loe(new BigDecimal("1.00")))
-            .select(entity)
-            .fetch());
+    assertThat(
+            query()
+                .from(entity, entity2)
+                .where(bigd1.subtract(bigd2).loe(new BigDecimal("1.00")))
+                .select(entity)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
   @Ignore
   public void sum() {
     // NOT SUPPORTED
-    query().from(cat).select(cat.kittens.size().sum()).fetch();
+    query().from(cat).select(cat.kittens.size().sumLong()).fetch();
   }
 
   @Test
   @Ignore
   public void sum_2() {
     // NOT SUPPORTED
-    query().from(cat).where(cat.kittens.size().sum().gt(0)).select(cat).fetch();
+    query().from(cat).where(cat.kittens.size().sumLong().gt(0)).select(cat).fetch();
   }
 
   @Test
   public void sum_3() {
-    assertEquals(21.0, query().from(cat).select(cat.bodyWeight.sum()).fetchFirst(), 0.0001);
+    assertThat(query().from(cat).select(cat.bodyWeight.sumDouble()).fetchFirst())
+        .isCloseTo(21.0, within(0.0001));
   }
 
   @Test
   public void sum_3_projected() {
-    double val = query().from(cat).select(cat.bodyWeight.sum()).fetchFirst();
+    double val = query().from(cat).select(cat.bodyWeight.sumDouble()).fetchFirst();
     DoubleProjection projection =
-        query().from(cat).select(new QDoubleProjection(cat.bodyWeight.sum())).fetchFirst();
-    assertEquals(val, projection.val, 0.001);
+        query().from(cat).select(new QDoubleProjection(cat.bodyWeight.sumDouble())).fetchFirst();
+    assertThat(projection.val).isCloseTo(val, within(0.001));
   }
 
   @Test
   public void sum_4() {
-    Double dbl = query().from(cat).select(cat.bodyWeight.sum().negate()).fetchFirst();
-    assertNotNull(dbl);
+    Double dbl = query().from(cat).select(cat.bodyWeight.sumDouble().negate()).fetchFirst();
+    assertThat(dbl).isNotNull();
   }
 
   @Test
   public void sum_5() {
     QShow show = QShow.show;
-    Long lng = query().from(show).select(show.id.sum()).fetchFirst();
-    assertNotNull(lng);
+    Long lng = query().from(show).select(show.id.sumLong()).fetchFirst();
+    assertThat(lng).isNotNull();
   }
 
   @Test
   public void sum_of_integer() {
     QCat cat2 = new QCat("cat2");
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(cat)
-            .where(select(cat2.breed.sum()).from(cat2).where(cat2.eq(cat.mate)).gt(0))
-            .select(cat)
-            .fetch());
+    assertThat(
+            query()
+                .from(cat)
+                .where(select(cat2.breed.sumLong()).from(cat2).where(cat2.eq(cat.mate)).gt(0L))
+                .select(cat)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 
   @Test
@@ -1908,7 +2022,7 @@ public abstract class AbstractJPATest {
     QCat cat2 = new QCat("cat2");
     query()
         .from(cat)
-        .where(select(cat2.floatProperty.sum()).from(cat2).where(cat2.eq(cat.mate)).gt(0.0f))
+        .where(select(cat2.floatProperty.sumDouble()).from(cat2).where(cat2.eq(cat.mate)).gt(0.0d))
         .select(cat)
         .fetch();
   }
@@ -1918,68 +2032,64 @@ public abstract class AbstractJPATest {
     QCat cat2 = new QCat("cat2");
     query()
         .from(cat)
-        .where(select(cat2.bodyWeight.sum()).from(cat2).where(cat2.eq(cat.mate)).gt(0.0))
+        .where(select(cat2.bodyWeight.sumDouble()).from(cat2).where(cat2.eq(cat.mate)).gt(0.0))
         .select(cat)
         .fetch();
   }
 
   @Test
-  public void sum_as_float() {
-    float val = query().from(cat).select(cat.floatProperty.sum()).fetchFirst();
-    assertTrue(val > 0);
+  public void sum_as_double_projected() {
+    double val = query().from(cat).select(cat.floatProperty.sumDouble()).fetchFirst();
+    DoubleProjection projection =
+        query().from(cat).select(new QDoubleProjection(cat.floatProperty.sumDouble())).fetchFirst();
+    assertThat(projection.val).isCloseTo(val, within(0.001));
   }
 
   @Test
-  public void sum_as_float_projected() {
-    float val = query().from(cat).select(cat.floatProperty.sum()).fetchFirst();
-    FloatProjection projection =
-        query().from(cat).select(new QFloatProjection(cat.floatProperty.sum())).fetchFirst();
-    assertEquals(val, projection.val, 0.001);
-  }
-
-  @Test
-  public void sum_as_float2() {
-    float val = query().from(cat).select(cat.floatProperty.sum().negate()).fetchFirst();
-    assertTrue(val < 0);
+  public void sum_as_double2() {
+    double val = query().from(cat).select(cat.floatProperty.sumDouble().negate()).fetchFirst();
+    assertThat(val < 0).isTrue();
   }
 
   @Test
   public void sum_coalesce() {
-    int val = query().from(cat).select(cat.weight.sum().coalesce(0)).fetchFirst();
-    assertEquals(0, val);
+    long val = query().from(cat).select(cat.weight.sumLong().coalesce(0L)).fetchFirst();
+    assertThat(val).isEqualTo(0);
   }
 
   @Test
   public void sum_noRows_double() {
-    assertNull(
-        query()
-            .from(cat)
-            .where(cat.name.eq(UUID.randomUUID().toString()))
-            .select(cat.bodyWeight.sum())
-            .fetchFirst());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.name.eq(UUID.randomUUID().toString()))
+                .select(cat.bodyWeight.sumDouble())
+                .fetchFirst())
+        .isNull();
   }
 
   @Test
   public void sum_noRows_float() {
-    assertNull(
-        query()
-            .from(cat)
-            .where(cat.name.eq(UUID.randomUUID().toString()))
-            .select(cat.floatProperty.sum())
-            .fetchFirst());
+    assertThat(
+            query()
+                .from(cat)
+                .where(cat.name.eq(UUID.randomUUID().toString()))
+                .select(cat.floatProperty.sumDouble())
+                .fetchFirst())
+        .isNull();
   }
 
   @Test
   @NoEclipseLink
   @NoOpenJPA
   @NoBatooJPA
-  @ExcludeIn({ORACLE, SQLSERVER})
+  @ExcludeIn({ORACLE, SQLSERVER, DERBY})
   public void test() {
-    Cat kitten = savedCats.get(0);
-    Cat noKitten = savedCats.get(savedCats.size() - 1);
+    Cat kitten = savedCats.getFirst();
+    Cat noKitten = savedCats.getLast();
 
     ProjectionsFactory projections =
-        new ProjectionsFactory(Module.JPA, getTarget()) {
+        new ProjectionsFactory(QuerydslModule.JPA, getTarget()) {
           @Override
           public <A, Q extends SimpleExpression<A>> Collection<Expression<?>> list(
               ListPath<A, Q> expr, ListExpression<A, Q> other, A knownElement) {
@@ -1995,8 +2105,8 @@ public abstract class AbstractJPATest {
     QueryExecution standardTest =
         new QueryExecution(
             projections,
-            new FilterFactory(projections, Module.JPA, getTarget()),
-            new MatchingFiltersFactory(Module.JPA, getTarget())) {
+            new FilterFactory(projections, QuerydslModule.JPA, getTarget()),
+            new MatchingFiltersFactory(QuerydslModule.JPA, getTarget())) {
 
           @Override
           protected Fetchable<?> createQuery() {
@@ -2036,18 +2146,18 @@ public abstract class AbstractJPATest {
   @Test
   public void tupleProjection() {
     List<Tuple> tuples = query().from(cat).select(cat.name, cat).fetch();
-    assertFalse(tuples.isEmpty());
+    assertThat(tuples).isNotEmpty();
     for (Tuple tuple : tuples) {
-      assertNotNull(tuple.get(cat.name));
-      assertNotNull(tuple.get(cat));
+      assertThat(tuple.get(cat.name)).isNotNull();
+      assertThat(tuple.get(cat)).isNotNull();
     }
   }
 
   @Test
   public void tupleProjection_as_queryResults() {
     QueryResults<Tuple> tuples = query().from(cat).limit(1).select(cat.name, cat).fetchResults();
-    assertEquals(1, tuples.getResults().size());
-    assertTrue(tuples.getTotal() > 0);
+    assertThat(tuples.getResults()).hasSize(1);
+    assertThat(tuples.getTotal() > 0).isTrue();
   }
 
   @Test
@@ -2069,7 +2179,7 @@ public abstract class AbstractJPATest {
                                 Projections.constructor(Cat.class, kitten.name, kitten.id)))));
 
     for (Cat entry : result.values()) {
-      assertEquals(1, entry.getKittens().size());
+      assertThat(entry.getKittens()).hasSize(1);
     }
   }
 
@@ -2083,9 +2193,10 @@ public abstract class AbstractJPATest {
             .innerJoin(cat.kittens, kitten)
             .transform(GroupBy.groupBy(cat.id, kitten.id).as(cat, kitten));
 
-    assertFalse(result.isEmpty());
+    assertThat(result.isEmpty()).isFalse();
     for (Tuple row : query().from(cat).innerJoin(cat.kittens, kitten).select(cat, kitten).fetch()) {
-      assertNotNull(result.get(Arrays.asList(row.get(cat).getId(), row.get(kitten).getId())));
+      assertThat(result.get(Arrays.asList(row.get(cat).getId(), row.get(kitten).getId())))
+          .isNotNull();
     }
   }
 
@@ -2107,9 +2218,9 @@ public abstract class AbstractJPATest {
                             Projections.constructor(Cat.class, kitten.name, kitten.id).as(k))));
 
     for (Group entry : result.values()) {
-      assertNotNull(entry.getOne(cat.id));
-      assertNotNull(entry.getOne(cat.name));
-      assertFalse(entry.getList(k).isEmpty());
+      assertThat(entry.getOne(cat.id)).isNotNull();
+      assertThat(entry.getOne(cat.name)).isNotNull();
+      assertThat(entry.getList(k)).isNotEmpty();
     }
   }
 
@@ -2117,45 +2228,49 @@ public abstract class AbstractJPATest {
   @NoBatooJPA
   public void treat() {
     QDomesticCat domesticCat = QDomesticCat.domesticCat;
-    assertEquals(
-        0,
-        query()
-            .from(cat)
-            .innerJoin(cat.mate, domesticCat._super)
-            .where(domesticCat.name.eq("Bobby"))
-            .fetchCount());
+    assertThat(
+            query()
+                .from(cat)
+                .innerJoin(cat.mate, domesticCat._super)
+                .where(domesticCat.name.eq("Bobby"))
+                .fetchCount())
+        .isEqualTo(0);
   }
 
   @Test
   @Ignore
   public void type() {
-    assertEquals(
-        Arrays.asList("C", "C", "C", "C", "C", "C", "A"),
-        query().from(animal).orderBy(animal.id.asc()).select(JPAExpressions.type(animal)).fetch());
+    assertThat(
+            query()
+                .from(animal)
+                .orderBy(animal.id.asc())
+                .select(JPAExpressions.type(animal))
+                .fetch())
+        .isEqualTo(Arrays.asList("C", "C", "C", "C", "C", "C", "A"));
   }
 
   @Test
   @NoOpenJPA
   public void type_order() {
-    assertEquals(
-        Arrays.asList(10, 1, 2, 3, 4, 5, 6),
-        query()
-            .from(animal)
-            .orderBy(JPAExpressions.type(animal).asc(), animal.id.asc())
-            .select(animal.id)
-            .fetch());
+    assertThat(
+            query()
+                .from(animal)
+                .orderBy(JPAExpressions.type(animal).asc(), animal.id.asc())
+                .select(animal.id)
+                .fetch())
+        .isEqualTo(Arrays.asList(10, 1, 2, 3, 4, 5, 6));
   }
 
   @Test
   @ExcludeIn({DERBY, ORACLE})
   public void byte_array() {
     QSimpleTypes simpleTypes = QSimpleTypes.simpleTypes;
-    assertEquals(
-        Collections.emptyList(),
-        query()
-            .from(simpleTypes)
-            .where(simpleTypes.byteArray.eq(new byte[] {0, 1}))
-            .select(simpleTypes)
-            .fetch());
+    assertThat(
+            query()
+                .from(simpleTypes)
+                .where(simpleTypes.byteArray.eq(new byte[] {0, 1}))
+                .select(simpleTypes)
+                .fetch())
+        .isEqualTo(Collections.emptyList());
   }
 }
