@@ -13,19 +13,18 @@
  */
 package com.querydsl.jpa;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import com.querydsl.apt.hibernate.HibernateAnnotationProcessor;
 import com.querydsl.apt.jpa.JPAAnnotationProcessor;
 import com.querydsl.codegen.CodegenModule;
 import com.querydsl.codegen.utils.CodeWriter;
 import com.querydsl.core.types.Expression;
+import jakarta.persistence.Entity;
 import java.io.File;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.Scanner;
-import javax.persistence.Entity;
 import org.junit.Test;
 
 public class PackageVerification {
@@ -38,12 +37,15 @@ public class PackageVerification {
   }
 
   private void verify(File oneJar, boolean hibernateDeps) throws Exception {
-    assertTrue(oneJar.getPath() + " doesn't exist", oneJar.exists());
+    assertThat(oneJar.exists()).as(oneJar.getPath() + " doesn't exist").isTrue();
     // verify classLoader
     URLClassLoader oneJarClassLoader = new URLClassLoader(new URL[] {oneJar.toURI().toURL()});
     oneJarClassLoader.loadClass(Expression.class.getName()); // querydsl-core
     oneJarClassLoader.loadClass(CodeWriter.class.getName()); // codegen
-    oneJarClassLoader.loadClass(CodegenModule.class.getName()).newInstance();
+    oneJarClassLoader
+        .loadClass(CodegenModule.class.getName())
+        .getDeclaredConstructor()
+        .newInstance();
     oneJarClassLoader.loadClass(Entity.class.getName()); // jpa
     Class<?> processor;
     if (hibernateDeps) {
@@ -53,10 +55,9 @@ public class PackageVerification {
       processor = JPAAnnotationProcessor.class;
     }
     Class cl = oneJarClassLoader.loadClass(processor.getName()); // querydsl-apt
-    cl.newInstance();
+    cl.getDeclaredConstructor().newInstance();
     String resourceKey = "META-INF/services/javax.annotation.processing.Processor";
-    assertEquals(
-        processor.getName(),
-        new Scanner(oneJarClassLoader.findResource(resourceKey).openStream()).nextLine());
+    assertThat(new Scanner(oneJarClassLoader.findResource(resourceKey).openStream()).nextLine())
+        .isEqualTo(processor.getName());
   }
 }
