@@ -13,8 +13,7 @@
  */
 package com.querydsl.mongodb;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import com.querydsl.apt.morphia.MorphiaAnnotationProcessor;
 import com.querydsl.codegen.CodegenModule;
@@ -38,21 +37,24 @@ public class PackageVerification {
   }
 
   private void verify(File oneJar) throws Exception {
-    assertTrue(oneJar.getPath() + " doesn't exist", oneJar.exists());
+    assertThat(oneJar.exists()).as(oneJar.getPath() + " doesn't exist").isTrue();
     // verify classLoader
     URLClassLoader oneJarClassLoader = new URLClassLoader(new URL[] {oneJar.toURI().toURL()});
     oneJarClassLoader.loadClass(Expression.class.getName()); // querydsl-core
     oneJarClassLoader.loadClass(CodeWriter.class.getName()); // codegen
-    oneJarClassLoader.loadClass(CodegenModule.class.getName()).newInstance();
+    oneJarClassLoader
+        .loadClass(CodegenModule.class.getName())
+        .getDeclaredConstructor()
+        .newInstance();
     oneJarClassLoader.loadClass(Entity.class.getName()); // morphia
     Class cl =
         oneJarClassLoader.loadClass(MorphiaAnnotationProcessor.class.getName()); // querydsl-apt
-    cl.newInstance();
+    cl.getDeclaredConstructor().newInstance();
     String resourceKey = "META-INF/services/javax.annotation.processing.Processor";
-    assertEquals(
-        MorphiaAnnotationProcessor.class.getName(),
-        new String(
-            Files.readAllBytes(Paths.get(oneJarClassLoader.findResource(resourceKey).toURI())),
-            StandardCharsets.UTF_8));
+    assertThat(
+            new String(
+                Files.readAllBytes(Paths.get(oneJarClassLoader.findResource(resourceKey).toURI())),
+                StandardCharsets.UTF_8))
+        .isEqualTo(MorphiaAnnotationProcessor.class.getName());
   }
 }
