@@ -16,7 +16,7 @@
 package com.querydsl.mongodb.document;
 
 import static java.util.Arrays.asList;
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import com.mongodb.DBRef;
 import com.mongodb.MongoClient;
@@ -111,32 +111,32 @@ public class MongodbQueryTest {
 
   @Test
   public void query1() {
-    assertEquals(4L, query(user).fetchCount());
-    assertEquals(4L, query(User.class).fetchCount());
+    assertThat(query(user).fetchCount()).isEqualTo(4L);
+    assertThat(query(User.class).fetchCount()).isEqualTo(4L);
   }
 
   @Test
   public void list_keys() {
     Document u =
         where(user.firstName.eq("Jaakko")).fetch(user.firstName, user.mainAddress().street).get(0);
-    assertEquals("Jaakko", u.get("firstName"));
-    assertNull(u.get("lastName"));
-    assertEquals("Aakatu", u.get("mainAddress", Document.class).get("street"));
-    assertNull(u.get("mainAddress", Document.class).get("postCode"));
+    assertThat(u.get("firstName")).isEqualTo("Jaakko");
+    assertThat(u.get("lastName")).isNull();
+    assertThat(u.get("mainAddress", Document.class).get("street")).isEqualTo("Aakatu");
+    assertThat(u.get("mainAddress", Document.class).get("postCode")).isNull();
   }
 
   @Test
   public void singleResult_keys() {
     Document u = where(user.firstName.eq("Jaakko")).fetchFirst(user.firstName);
-    assertEquals("Jaakko", u.get("firstName"));
-    assertNull(u.get("lastName"));
+    assertThat(u.get("firstName")).isEqualTo("Jaakko");
+    assertThat(u.get("lastName")).isNull();
   }
 
   @Test
   public void uniqueResult_keys() {
     Document u = where(user.firstName.eq("Jaakko")).fetchOne(user.firstName);
-    assertEquals("Jaakko", u.get("firstName"));
-    assertNull(u.get("lastName"));
+    assertThat(u.get("firstName")).isEqualTo("Jaakko");
+    assertThat(u.get("lastName")).isNull();
   }
 
   @Test
@@ -144,8 +144,8 @@ public class MongodbQueryTest {
     Document u = where(user.firstName.eq("Jaakko")).fetchFirst(user.addresses.any().street);
     List<Document> addresses = u.get("addresses", List.class);
     for (Document a : addresses) {
-      assertNotNull(a.get("street"));
-      assertNull(a.get("city"));
+      assertThat(a.get("street")).isNotNull();
+      assertThat(a.get("city")).isNull();
     }
   }
 
@@ -167,13 +167,16 @@ public class MongodbQueryTest {
     entity.getProperties().put("key", "value");
     ds.save(entity);
 
-    assertTrue(
-        query(mapEntity).where(mapEntity.properties.get("key").isNotNull()).fetchCount() > 0);
-    assertFalse(
-        query(mapEntity).where(mapEntity.properties.get("key2").isNotNull()).fetchCount() > 0);
+    assertThat(query(mapEntity).where(mapEntity.properties.get("key").isNotNull()).fetchCount() > 0)
+        .isTrue();
+    assertThat(
+            query(mapEntity).where(mapEntity.properties.get("key2").isNotNull()).fetchCount() > 0)
+        .isFalse();
 
-    assertTrue(query(mapEntity).where(mapEntity.properties.containsKey("key")).fetchCount() > 0);
-    assertFalse(query(mapEntity).where(mapEntity.properties.containsKey("key2")).fetchCount() > 0);
+    assertThat(query(mapEntity).where(mapEntity.properties.containsKey("key")).fetchCount() > 0)
+        .isTrue();
+    assertThat(query(mapEntity).where(mapEntity.properties.containsKey("key2")).fetchCount() > 0)
+        .isFalse();
   }
 
   @Test
@@ -182,28 +185,33 @@ public class MongodbQueryTest {
     entity.getProperties().put("key", "value");
     ds.save(entity);
 
-    assertFalse(
-        query(mapEntity).where(mapEntity.properties.get("key").isNotNull().not()).fetchCount() > 0);
-    assertTrue(
-        query(mapEntity).where(mapEntity.properties.get("key2").isNotNull().not()).fetchCount()
-            > 0);
+    assertThat(
+            query(mapEntity).where(mapEntity.properties.get("key").isNotNull().not()).fetchCount()
+                > 0)
+        .isFalse();
+    assertThat(
+            query(mapEntity).where(mapEntity.properties.get("key2").isNotNull().not()).fetchCount()
+                > 0)
+        .isTrue();
 
-    assertFalse(
-        query(mapEntity).where(mapEntity.properties.containsKey("key").not()).fetchCount() > 0);
-    assertTrue(
-        query(mapEntity).where(mapEntity.properties.containsKey("key2").not()).fetchCount() > 0);
+    assertThat(
+            query(mapEntity).where(mapEntity.properties.containsKey("key").not()).fetchCount() > 0)
+        .isFalse();
+    assertThat(
+            query(mapEntity).where(mapEntity.properties.containsKey("key2").not()).fetchCount() > 0)
+        .isTrue();
   }
 
   @Test
   public void equals_ignore_case() {
-    assertTrue(where(user.firstName.equalsIgnoreCase("jAaKko")).fetchCount() > 0);
-    assertFalse(where(user.firstName.equalsIgnoreCase("AaKk")).fetchCount() > 0);
+    assertThat(where(user.firstName.equalsIgnoreCase("jAaKko")).fetchCount() > 0).isTrue();
+    assertThat(where(user.firstName.equalsIgnoreCase("AaKk")).fetchCount() > 0).isFalse();
   }
 
   @Test
   public void equals_ignore_case_not() {
-    assertTrue(where(user.firstName.equalsIgnoreCase("jAaKko").not()).fetchCount() > 0);
-    assertTrue(where(user.firstName.equalsIgnoreCase("AaKk").not()).fetchCount() > 0);
+    assertThat(where(user.firstName.equalsIgnoreCase("jAaKko").not()).fetchCount() > 0).isTrue();
+    assertThat(where(user.firstName.equalsIgnoreCase("AaKk").not()).fetchCount() > 0).isTrue();
   }
 
   @Test
@@ -222,24 +230,24 @@ public class MongodbQueryTest {
 
   @Test
   public void exists() {
-    assertTrue(where(user.firstName.eq("Jaakko")).fetchCount() > 0);
-    assertFalse(where(user.firstName.eq("JaakkoX")).fetchCount() > 0);
+    assertThat(where(user.firstName.eq("Jaakko")).fetchCount() > 0).isTrue();
+    assertThat(where(user.firstName.eq("JaakkoX")).fetchCount() > 0).isFalse();
   }
 
   @Test
   public void find_by_id() {
-    assertNotNull(where(user.id.eq(user1.getId())).fetchFirst() != null);
+    assertThat(where(user.id.eq(user1.getId())).fetchFirst() != null).isNotNull();
   }
 
   @Test
   public void notExists() {
-    assertFalse(where(user.firstName.eq("Jaakko")).fetchCount() == 0);
-    assertTrue(where(user.firstName.eq("JaakkoX")).fetchCount() == 0);
+    assertThat(where(user.firstName.eq("Jaakko")).fetchCount() == 0).isFalse();
+    assertThat(where(user.firstName.eq("JaakkoX")).fetchCount() == 0).isTrue();
   }
 
   @Test
   public void uniqueResult() {
-    assertEquals("Jantunen", where(user.firstName.eq("Jaakko")).fetchOne().get("lastName"));
+    assertThat(where(user.firstName.eq("Jaakko")).fetchOne().get("lastName")).isEqualTo("Jantunen");
   }
 
   @Test(expected = NonUniqueResultException.class)
@@ -254,14 +262,16 @@ public class MongodbQueryTest {
 
   @Test
   public void longPath() {
-    assertEquals(2, query().where(user.mainAddress().city().name.eq("Helsinki")).fetchCount());
-    assertEquals(2, query().where(user.mainAddress().city().name.eq("Tampere")).fetchCount());
+    assertThat(query().where(user.mainAddress().city().name.eq("Helsinki")).fetchCount())
+        .isEqualTo(2);
+    assertThat(query().where(user.mainAddress().city().name.eq("Tampere")).fetchCount())
+        .isEqualTo(2);
   }
 
   @Test
   public void collectionPath() {
-    assertEquals(1, query().where(user.addresses.any().street.eq("Aakatu1")).fetchCount());
-    assertEquals(0, query().where(user.addresses.any().street.eq("akatu")).fetchCount());
+    assertThat(query().where(user.addresses.any().street.eq("Aakatu1")).fetchCount()).isEqualTo(1);
+    assertThat(query().where(user.addresses.any().street.eq("akatu")).fetchCount()).isEqualTo(0);
   }
 
   @Test
@@ -277,78 +287,87 @@ public class MongodbQueryTest {
 
     Document datesDocument = asDocument(d);
 
-    assertEquals(datesDocument, query(dates).where(dates.date.between(start, end)).fetchFirst());
-    assertEquals(0, query(dates).where(dates.date.between(new Date(0), start)).fetchCount());
+    assertThat(query(dates).where(dates.date.between(start, end)).fetchFirst())
+        .isEqualTo(datesDocument);
+    assertThat(query(dates).where(dates.date.between(new Date(0), start)).fetchCount())
+        .isEqualTo(0);
   }
 
   @Test
   public void elemMatch() {
     //      { "addresses" : { "$elemMatch" : { "street" : "Aakatu1"}}}
-    assertEquals(
-        1,
-        query().anyEmbedded(user.addresses, address).on(address.street.eq("Aakatu1")).fetchCount());
+    assertThat(
+            query()
+                .anyEmbedded(user.addresses, address)
+                .on(address.street.eq("Aakatu1"))
+                .fetchCount())
+        .isEqualTo(1);
     //      { "addresses" : { "$elemMatch" : { "street" : "Aakatu1" , "postCode" : "00100"}}}
-    assertEquals(
-        1,
-        query()
-            .anyEmbedded(user.addresses, address)
-            .on(address.street.eq("Aakatu1"), address.postCode.eq("00100"))
-            .fetchCount());
+    assertThat(
+            query()
+                .anyEmbedded(user.addresses, address)
+                .on(address.street.eq("Aakatu1"), address.postCode.eq("00100"))
+                .fetchCount())
+        .isEqualTo(1);
     //      { "addresses" : { "$elemMatch" : { "street" : "akatu"}}}
-    assertEquals(
-        0,
-        query().anyEmbedded(user.addresses, address).on(address.street.eq("akatu")).fetchCount());
+    assertThat(
+            query()
+                .anyEmbedded(user.addresses, address)
+                .on(address.street.eq("akatu"))
+                .fetchCount())
+        .isEqualTo(0);
     //      { "addresses" : { "$elemMatch" : { "street" : "Aakatu1" , "postCode" : "00200"}}}
-    assertEquals(
-        0,
-        query()
-            .anyEmbedded(user.addresses, address)
-            .on(address.street.eq("Aakatu1"), address.postCode.eq("00200"))
-            .fetchCount());
+    assertThat(
+            query()
+                .anyEmbedded(user.addresses, address)
+                .on(address.street.eq("Aakatu1"), address.postCode.eq("00200"))
+                .fetchCount())
+        .isEqualTo(0);
   }
 
   @Test
   public void indexedAccess() {
-    assertEquals(1, query().where(user.addresses.get(0).street.eq("Aakatu1")).fetchCount());
-    assertEquals(0, query().where(user.addresses.get(1).street.eq("Aakatu1")).fetchCount());
+    assertThat(query().where(user.addresses.get(0).street.eq("Aakatu1")).fetchCount()).isEqualTo(1);
+    assertThat(query().where(user.addresses.get(1).street.eq("Aakatu1")).fetchCount()).isEqualTo(0);
   }
 
   @Test
   public void count() {
-    assertEquals(4, query().fetchCount());
+    assertThat(query().fetchCount()).isEqualTo(4);
   }
 
   @Test
   public void order() {
     List<Document> users = query().orderBy(user.age.asc()).fetch();
-    assertEquals(asList(u1, u2, u3, u4), users);
+    assertThat(users).isEqualTo(asList(u1, u2, u3, u4));
 
     users = query().orderBy(user.age.desc()).fetch();
-    assertEquals(asList(u4, u3, u2, u1), users);
+    assertThat(users).isEqualTo(asList(u4, u3, u2, u1));
   }
 
   @Test
   public void restrict() {
-    assertEquals(asList(u1, u2), query().limit(2).orderBy(user.age.asc()).fetch());
-    assertEquals(asList(u2, u3), query().limit(2).offset(1).orderBy(user.age.asc()).fetch());
+    assertThat(query().limit(2).orderBy(user.age.asc()).fetch()).isEqualTo(asList(u1, u2));
+    assertThat(query().limit(2).offset(1).orderBy(user.age.asc()).fetch())
+        .isEqualTo(asList(u2, u3));
   }
 
   @Test
   public void listResults() {
     QueryResults<Document> results = query().limit(2).orderBy(user.age.asc()).fetchResults();
-    assertEquals(4L, results.getTotal());
-    assertEquals(2, results.getResults().size());
+    assertThat(results.getTotal()).isEqualTo(4L);
+    assertThat(results.getResults()).hasSize(2);
 
     results = query().offset(2).orderBy(user.age.asc()).fetchResults();
-    assertEquals(4L, results.getTotal());
-    assertEquals(2, results.getResults().size());
+    assertThat(results.getTotal()).isEqualTo(4L);
+    assertThat(results.getResults()).hasSize(2);
   }
 
   @Test
   public void emptyResults() {
     QueryResults<Document> results = query().where(user.firstName.eq("XXX")).fetchResults();
-    assertEquals(0L, results.getTotal());
-    assertEquals(Collections.emptyList(), results.getResults());
+    assertThat(results.getTotal()).isEqualTo(0L);
+    assertThat(results.getResults()).isEqualTo(Collections.emptyList());
   }
 
   @Test
@@ -425,6 +444,28 @@ public class MongodbQueryTest {
   }
 
   @Test
+  public void likeIgnoreCase() {
+    assertQuery(user.firstName.likeIgnoreCase("JAAN"));
+    assertQuery(user.firstName.likeIgnoreCase("Jaan%"), u3, u4);
+    assertQuery(user.firstName.likeIgnoreCase("JAAN%"), u3, u4);
+    assertQuery(user.firstName.likeIgnoreCase("jaan%"), u3, u4);
+
+    assertQuery(user.lastName.likeIgnoreCase("%unen"), u2, u1);
+    assertQuery(user.lastName.likeIgnoreCase("%UNEN"), u2, u1);
+  }
+
+  @Test
+  public void likeIgnoreCase_not() {
+    assertQuery(user.firstName.likeIgnoreCase("Jaan").not(), u3, u4, u2, u1);
+    assertQuery(user.firstName.likeIgnoreCase("Jaan%").not(), u2, u1);
+    assertQuery(user.firstName.likeIgnoreCase("JAAN%").not(), u2, u1);
+    assertQuery(user.firstName.likeIgnoreCase("jaan%").not(), u2, u1);
+
+    assertQuery(user.lastName.likeIgnoreCase("%unen").not(), u3, u4);
+    assertQuery(user.lastName.likeIgnoreCase("%UNEN").not(), u3, u4);
+  }
+
+  @Test
   public void isNotNull() {
     assertQuery(user.firstName.isNotNull(), u3, u4, u2, u1);
   }
@@ -483,17 +524,17 @@ public class MongodbQueryTest {
     Iterator<Document> i =
         where(user.firstName.startsWith("A")).orderBy(user.firstName.asc()).iterate();
 
-    assertEquals(a.getId(), i.next().get("_id"));
-    assertEquals(b.getId(), i.next().get("_id"));
-    assertEquals(c.getId(), i.next().get("_id"));
-    assertEquals(false, i.hasNext());
+    assertThat(i.next().get("_id")).isEqualTo(a.getId());
+    assertThat(i.next().get("_id")).isEqualTo(b.getId());
+    assertThat(i.next().get("_id")).isEqualTo(c.getId());
+    assertThat(i.hasNext()).isEqualTo(false);
   }
 
   @Test
   public void uniqueResultAndLimitAndOffset() {
     SimpleMongodbQuery q = query().where(user.firstName.startsWith("Ja")).orderBy(user.age.asc());
-    assertEquals(4, q.fetch().size());
-    assertEquals(u1, q.fetch().get(0));
+    assertThat(q.fetch()).hasSize(4);
+    assertThat(q.fetch().get(0)).isEqualTo(u1);
   }
 
   @Test
@@ -547,7 +588,7 @@ public class MongodbQueryTest {
     for (Predicate predicate : predicates) {
       long count1 = where(predicate).fetchCount();
       long count2 = where(predicate.not()).fetchCount();
-      assertEquals(predicate.toString(), 4, count1 + count2);
+      assertThat(count1 + count2).as(predicate.toString()).isEqualTo(4);
     }
   }
 
@@ -567,8 +608,8 @@ public class MongodbQueryTest {
     i.setCtds(Arrays.asList(ObjectId.get(), ObjectId.get(), ObjectId.get()));
     ds.save(i);
 
-    assertTrue(where(item, item.ctds.contains(i.getCtds().get(0))).fetchCount() > 0);
-    assertTrue(where(item, item.ctds.contains(ObjectId.get())).fetchCount() == 0);
+    assertThat(where(item, item.ctds.contains(i.getCtds().get(0))).fetchCount() > 0).isTrue();
+    assertThat(where(item, item.ctds.contains(ObjectId.get())).fetchCount() == 0).isTrue();
   }
 
   @Test
@@ -577,10 +618,12 @@ public class MongodbQueryTest {
     i.setCtds(Arrays.asList(ObjectId.get(), ObjectId.get(), ObjectId.get()));
     ds.save(i);
 
-    assertTrue(where(item, item.ctds.any().in(i.getCtds())).fetchCount() > 0);
-    assertTrue(
-        where(item, item.ctds.any().in(Arrays.asList(ObjectId.get(), ObjectId.get()))).fetchCount()
-            == 0);
+    assertThat(where(item, item.ctds.any().in(i.getCtds())).fetchCount() > 0).isTrue();
+    assertThat(
+            where(item, item.ctds.any().in(Arrays.asList(ObjectId.get(), ObjectId.get())))
+                    .fetchCount()
+                == 0)
+        .isTrue();
   }
 
   @Test
@@ -597,15 +640,15 @@ public class MongodbQueryTest {
   public void readPreference() {
     SimpleMongodbQuery query = query();
     query.setReadPreference(ReadPreference.primary());
-    assertEquals(4, query.fetchCount());
+    assertThat(query.fetchCount()).isEqualTo(4);
   }
 
   @Test
   public void asDBObject() {
     SimpleMongodbQuery query = query();
     query.where(user.firstName.eq("Bob"), user.lastName.eq("Wilson"));
-    assertEquals(
-        new Document().append("firstName", "Bob").append("lastName", "Wilson"), query.asDocument());
+    assertThat(query.asDocument())
+        .isEqualTo(new Document().append("firstName", "Bob").append("lastName", "Wilson"));
   }
 
   private Document asDocument(AbstractEntity entity) {
@@ -647,15 +690,15 @@ public class MongodbQueryTest {
     String toString = query.toString();
     List<Document> results = query.fetch();
 
-    assertNotNull(toString, results);
+    assertThat(results).as(toString).isNotNull();
     if (expected == null) {
-      assertEquals("Should get empty result", 0, results.size());
+      assertThat(results.size()).as("Should get empty result").isEqualTo(0);
       return;
     }
-    assertEquals(toString, expected.length, results.size());
+    assertThat(results.size()).as(toString).isEqualTo(expected.length);
     int i = 0;
     for (Document u : expected) {
-      assertEquals(toString, u, results.get(i++));
+      assertThat(results.get(i++)).as(toString).isEqualTo(u);
     }
   }
 
@@ -677,8 +720,8 @@ public class MongodbQueryTest {
       user.addFriend(u);
     }
     if (!users.isEmpty()) {
-      user.setFriend(users.get(users.size() - 1));
-      user.setEnemy(users.get(users.size() - 1));
+      user.setFriend(users.getLast());
+      user.setEnemy(users.getLast());
     }
     ds.save(user);
     users.add(user);
